Wrap notebooks at 80 characters

--- a/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Construction of an artificial (but realistic) image\n",
     "\n",
-    "Before we move on to looking at a real image, let's spend a few minutes getting comfortable with what each of the different sources of counts look like in an artificial image. The advantage is that we can control how much of each count source goes into the image. Looking at extreme examples can help build an understanding of what's going on in your images."
+    "Before we move on to looking at a real image, let's spend a few minutes getting\n",
+    "comfortable with what each of the different sources of counts look like in an\n",
+    "artificial image. The advantage is that we can control how much of each count\n",
+    "source goes into the image. Looking at extreme examples can help build an\n",
+    "understanding of what's going on in your images."
    ]
   },
   {
@@ -15,7 +19,9 @@
    "source": [
     "## Imports\n",
     "\n",
-    "Almost all of the notebooks in this tutorial will start with the import of the Python packages needed for that notebook. The lines below set up [matplotlib](https://matplotlib.org/), a widely used plotting package."
+    "Almost all of the notebooks in this tutorial will start with the import of the\n",
+    "Python packages needed for that notebook. The lines below set up\n",
+    "[matplotlib](https://matplotlib.org/), a widely used plotting package."
    ]
   },
   {
@@ -34,7 +40,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Python file referenced below, [convenience_functions.py](convenience_functions.py), contains a few functions for convenient display of images in a notebook. Note that by clicking the above link you can read (or edit) the file in the browser. You can also read/edit it in your preferred editor, but it's handy to know that editing Python files in the Jupyter notebook environment is possible."
+    "The Python file referenced below, [convenience_functions.py](convenience_functions.py), contains a\n",
+    "few functions for convenient display of images in a notebook. Note that by\n",
+    "clicking the above link you can read (or edit) the file in the browser. You can\n",
+    "also read/edit it in your preferred editor, but it's handy to know that editing\n",
+    "Python files in the Jupyter notebook environment is possible."
    ]
   },
   {
@@ -52,7 +62,9 @@
    "source": [
     "## Start: a blank image\n",
     "\n",
-    "We'll begin with the simplest possible image: an array of zeros. The dimensions of the image below are chosen to match some real images we'll be working with later."
+    "We'll begin with the simplest possible image: an array of zeros. The dimensions\n",
+    "of the image below are chosen to match some real images we'll be working with\n",
+    "later."
    ]
   },
   {
@@ -79,9 +91,14 @@
    "source": [
     "## Add some read noise\n",
     "\n",
-    "Which each of the things we add, we'll write a small function for adding so that it's easier to experiment with different values. Read noise has a Gaussian distribution; the standard deviation of the Gaussian (in counts) is the read noise (in electrons) divided by the gain (in electrons per count). Read noise is almost always given in electrons.\n",
+    "Which each of the things we add, we'll write a small function for adding so that\n",
+    "it's easier to experiment with different values. Read noise has a Gaussian\n",
+    "distribution; the standard deviation of the Gaussian (in counts) is the read\n",
+    "noise (in electrons) divided by the gain (in electrons per count). Read noise is\n",
+    "almost always given in electrons.\n",
     "\n",
-    "Note that each time you run this function you'll get a different set of pixels so that it behaves like real noise."
+    "Note that each time you run this function you'll get a different set of pixels\n",
+    "so that it behaves like real noise."
    ]
   },
   {
@@ -127,17 +144,33 @@
    "source": [
     "##  Bias\n",
     "\n",
-    "Bias is an offset voltage (which translates into some non-zero number of counts) added to every pixel in the image to ensure that when voltages are converted to counts there is never a negative count. Note that in the noise image above, some counts are positive and some are negative, as you would expect for a Gaussian distribution centered on zero. Pixel values are typically read out from the electronics as *positive* numbers, though. Adding a constant voltage, which corresponds to a constant, positive number, ensures that even an image which consists entirely of noise has no negative values.\n",
+    "Bias is an offset voltage (which translates into some non-zero number of counts)\n",
+    "added to every pixel in the image to ensure that when voltages are converted to\n",
+    "counts there is never a negative count. Note that in the noise image above, some\n",
+    "counts are positive and some are negative, as you would expect for a Gaussian\n",
+    "distribution centered on zero. Pixel values are typically read out from the\n",
+    "electronics as *positive* numbers, though. Adding a constant voltage, which\n",
+    "corresponds to a constant, positive number, ensures that even an image which\n",
+    "consists entirely of noise has no negative values.\n",
     "\n",
-    "The bias value is roughly the same across the CCD chip, though it's not uncommon to have \"bad\" columns and pixels in which the bias level is consistently offset from the rest of the chip.\n",
+    "The bias value is roughly the same across the CCD chip, though it's not uncommon\n",
+    "to have \"bad\" columns and pixels in which the bias level is consistently offset\n",
+    "from the rest of the chip.\n",
     "\n",
-    "To model a bias image, we create a uniform array and, optionally, add in some \"bad\" columns. The bad columns are exaggeratesd here to ensure they are visible.\n",
+    "To model a bias image, we create a uniform array and, optionally, add in some\n",
+    "\"bad\" columns. The bad columns are exaggeratesd here to ensure they are visible.\n",
     "\n",
-    "The bad columns in a CCD are typically stable over a very long time. A random number generator is used below to pick which columns in our CCD are bad, but we'll use a seed to make sure that each time we generate the bias we get the same bad columns (and pixel values within the bad columns).\n",
+    "The bad columns in a CCD are typically stable over a very long time. A random\n",
+    "number generator is used below to pick which columns in our CCD are bad, but\n",
+    "we'll use a seed to make sure that each time we generate the bias we get the\n",
+    "same bad columns (and pixel values within the bad columns).\n",
     "\n",
-    "This stability is what makes it possible to correct for the effect in real images.\n",
+    "This stability is what makes it possible to correct for the effect in real\n",
+    "images.\n",
     "\n",
-    "Finally, note that the bias doesn't depend on exposure time. That's because a bias exposure is a zero-second exposure in which the camera simply reads the chip out."
+    "Finally, note that the bias doesn't depend on exposure time. That's because a\n",
+    "bias exposure is a zero-second exposure in which the camera simply reads the\n",
+    "chip out."
    ]
   },
   {
@@ -211,17 +244,29 @@
    "source": [
     "## Dark current\n",
     "\n",
-    "Dark current depends on the temperature of the sensor. The amount of dark counts in an image also depends on the exposure time. Dark current is typically very small (0.1 electrons/pixel/second or less). Dark counts in this function are calculated by multiplying the input dark current by the input exposure time after converting the dark current unit from electrons to counts using the gain.\n",
+    "Dark current depends on the temperature of the sensor. The amount of dark counts\n",
+    "in an image also depends on the exposure time. Dark current is typically very\n",
+    "small (0.1 electrons/pixel/second or less). Dark counts in this function are\n",
+    "calculated by multiplying the input dark current by the input exposure time\n",
+    "after converting the dark current unit from electrons to counts using the gain.\n",
     "\n",
-    "A small fraction of pixels are \"hot\": their dark current is much larger than the rest of the pixels. Hot pixels are modeled here by choosing a subset of the pixels to have a dark current 10,000 times larger than the input dark current. This exaggerates the effect to make those pixels more visible.\n",
+    "A small fraction of pixels are \"hot\": their dark current is much larger than the\n",
+    "rest of the pixels. Hot pixels are modeled here by choosing a subset of the\n",
+    "pixels to have a dark current 10,000 times larger than the input dark current.\n",
+    "This exaggerates the effect to make those pixels more visible.\n",
     "\n",
-    "The location and current of hot pixels is typically stable over long periods of time, which makes it straightforward to remove their effect from science images by subtracting them out.\n",
+    "The location and current of hot pixels is typically stable over long periods of\n",
+    "time, which makes it straightforward to remove their effect from science images\n",
+    "by subtracting them out.\n",
     "\n",
     "A dark frame (or dark image) is an image taken with the camera shutter closed.\n",
     "\n",
-    "The function below simulates dark current only, i.e. it does *not* simulate the read noise that is a part of any actual dark frame from a CCD.\n",
+    "The function below simulates dark current only, i.e. it does *not* simulate the\n",
+    "read noise that is a part of any actual dark frame from a CCD.\n",
     "\n",
-    "Note that the simulation dark image looks noisy even though it doesn't include read noise. This is because the number of electrons generated obey a Poisson distribution."
+    "Note that the simulation dark image looks noisy even though it doesn't include\n",
+    "read noise. This is because the number of electrons generated obey a Poisson\n",
+    "distribution."
    ]
   },
   {
@@ -295,7 +340,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the central value of the image colorbar is 10, the product of the dark current and the exposure time."
+    "Note that the central value of the image colorbar is 10, the product of the dark\n",
+    "current and the exposure time."
    ]
   },
   {
@@ -315,13 +361,21 @@
    "source": [
     "## Sky background\n",
     "\n",
-    "The amount of sky background depends on the atmospheric conditions (humidity, presence of light clouds, fires upwind from the observatory), the light sources in the sky (the Moon), and light sources in the surrounding area (cities). It may be uniform across the frame or it may not be, depending on the conditions.\n",
+    "The amount of sky background depends on the atmospheric conditions (humidity,\n",
+    "presence of light clouds, fires upwind from the observatory), the light sources\n",
+    "in the sky (the Moon), and light sources in the surrounding area (cities). It\n",
+    "may be uniform across the frame or it may not be, depending on the conditions.\n",
     "\n",
-    "The function below generates some sky background. Each time you run it you'll get slightly different results (even if you keep the desired amount of sky counts the same) because the counts from a light source follow a Poisson distribution.\n",
+    "The function below generates some sky background. Each time you run it you'll\n",
+    "get slightly different results (even if you keep the desired amount of sky\n",
+    "counts the same) because the counts from a light source follow a Poisson\n",
+    "distribution.\n",
     "\n",
-    "The amount of sky background is directly proportional to the exposure time. In the function below however, you input the desired number of sky counts.\n",
+    "The amount of sky background is directly proportional to the exposure time. In\n",
+    "the function below however, you input the desired number of sky counts.\n",
     "\n",
-    "It's not at all unusual to have a gradient in the sky across the image, but that effect is not simulated here."
+    "It's not at all unusual to have a gradient in the sky across the image, but that\n",
+    "effect is not simulated here."
    ]
   },
   {
@@ -380,13 +434,18 @@
    "source": [
     "### Summary\n",
     "\n",
-    "Note that the central value of the pixels in the \"realistic\" cloud image above, 1130 or so, is the sum of the: \n",
+    "Note that the central value of the pixels in the \"realistic\" cloud image above,\n",
+    "1130 or so, is the sum of the:\n",
     "\n",
     "+ bias level (1100 counts)\n",
-    "+ dark current (10 counts, which is 0.1 e/sec/pix $\\times$ 100 sec, divided by the gain of 1 e/count)\n",
+    "+ dark current (10 counts, which is 0.1 e/sec/pix $\\times$ 100 sec, divided by\n",
+    "the gain of 1 e/count)\n",
     "+ sky counts (20 counts)\n",
     "\n",
-    "The distribution of counts around that is determined by the read noise (5 electrons) and the expected width of a Poisson distribution for the sky counts, which is the square root of the number of those counts, $\\sqrt{20} \\approx 4.5$. Add those in quadrature and you get about 6.7."
+    "The distribution of counts around that is determined by the read noise (5\n",
+    "electrons) and the expected width of a Poisson distribution for the sky counts,\n",
+    "which is the square root of the number of those counts, $\\sqrt{20} \\approx 4.5$.\n",
+    "Add those in quadrature and you get about 6.7."
    ]
   },
   {
@@ -395,7 +454,9 @@
    "source": [
     "### Interactive demo\n",
     "\n",
-    "The cell below sets up an interactive demo that lets you change the value of read noise and other parameters to see the effect that changing them has on the resulting image."
+    "The cell below sets up an interactive demo that lets you change the value of\n",
+    "read noise and other parameters to see the effect that changing them has on the\n",
+    "resulting image."
    ]
   },
   {
@@ -438,7 +499,9 @@
    "source": [
     "## Add some \"stars\"\n",
     "\n",
-    "The \"stars\" we'll add below are essentially just (round) Gaussian sources. The function that does most of the work is from [photutils](https://photutils.readthedocs.io/en/stable/index.html), which we'll return to later for doing photometry.\n",
+    "The \"stars\" we'll add below are essentially just (round) Gaussian sources. The\n",
+    "function that does most of the work is from [photutils](https://photutils.readthedocs.io/en/stable/index.html),\n",
+    "which we'll return to later for doing photometry.\n",
     "\n"
    ]
   },
@@ -514,7 +577,8 @@
    "source": [
     "### Discussion\n",
     "\n",
-    "In the image above the single-pixel bright dots are hot pixels while the remaining dots that are larger than a pixel are simulated stars."
+    "In the image above the single-pixel bright dots are hot pixels while the\n",
+    "remaining dots that are larger than a pixel are simulated stars."
    ]
   },
   {
@@ -523,7 +587,8 @@
    "source": [
     "## Summary\n",
     "\n",
-    "Everything we have included so far has been additive. Symbolically, the simulated image above was built like this:\n",
+    "Everything we have included so far has been additive. Symbolically, the\n",
+    "simulated image above was built like this:\n",
     "\n",
     "$$\n",
     "\\text{image} = \\text{bias} + \\text{noise} + \\text{dark current} + \\text{sky} + \\text{stars}\n",
@@ -538,7 +603,9 @@
     "There are a few complications:\n",
     "\n",
     "1. There are multiplicative effects that will be discussed in the next notebook.\n",
-    "2. The way to measure each of the the things we need to subtract (bias and dark current) is to take images, each of which includes read noise. That can be minimized by combining several calibration images.\n",
+    "2. The way to measure each of the the things we need to subtract (bias and dark\n",
+    "current) is to take images, each of which includes read noise. That can be\n",
+    "minimized by combining several calibration images.\n",
     "3. There is no way to subtract the read noise because it is random."
    ]
   }
