--- a/notebooks/01-04-Nonuniform-sensitivity.ipynb
+++ b/notebooks/01-04-Nonuniform-sensitivity.ipynb
@@ -13,11 +13,18 @@
    "source": [
     "## Background\n",
     "\n",
-    "Not all pixels in a camera have the same sensitivity to light: there are intrinsic differences from pixel-to-pixel. Vignetting, a dimming near the corners of an image caused by the optical system to which the camera is attached, and dust on optical elements such as filters, the glass window covering the CCD, and the CCD chip itself can also block some light.\n",
+    "Not all pixels in a camera have the same sensitivity to light: there are\n",
+    "intrinsic differences from pixel-to-pixel. Vignetting, a dimming near the\n",
+    "corners of an image caused by the optical system to which the camera is\n",
+    "attached, and dust on optical elements such as filters, the glass window\n",
+    "covering the CCD, and the CCD chip itself can also block some light.\n",
     "\n",
-    "Vingetting and dust can reduce the amount of light reaching the CCD chip while pixel-to-pixel sensitivity variations affects the counts read from the chip.\n",
+    "Vingetting and dust can reduce the amount of light reaching the CCD chip while\n",
+    "pixel-to-pixel sensitivity variations affects the counts read from the chip.\n",
     "\n",
-    "The code to produce the simulated sensitivity map (aka flat image) is long enough that is not included in this notebook. We load it instead from [image_sim.py](image_sim.py)."
+    "The code to produce the simulated sensitivity map (aka flat image) is long\n",
+    "enough that is not included in this notebook. We load it instead from\n",
+    "[image_sim.py](image_sim.py)."
    ]
   },
   {
@@ -38,7 +45,8 @@
    "source": [
     "## A sample flat image\n",
     "\n",
-    "The sample flat image below has the same size as the simulated image in the previous notebook. "
+    "The sample flat image below has the same size as the simulated image in the\n",
+    "previous notebook."
    ]
   },
   {
@@ -64,7 +72,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The \"donuts\" in the image are dust on elements like filters in the optical path. Note that the size of the variations is small, a few percent at most. "
+    "The \"donuts\" in the image are dust on elements like filters in the optical path.\n",
+    "Note that the size of the variations is small, a few percent at most."
    ]
   },
   {
@@ -73,13 +82,16 @@
    "source": [
     "## Effect of nonuniform sensitivity on images\n",
     "\n",
-    "Recall that an image read off a CCD, ignoring variations in sensitivity, can be thought of as a combination of several pieces:\n",
+    "Recall that an image read off a CCD, ignoring variations in sensitivity, can be\n",
+    "thought of as a combination of several pieces:\n",
     "\n",
     "$$\n",
     "\\text{image} = \\text{bias} + \\text{noise} + \\text{dark current} + \\text{sky} + \\text{stars}\n",
     "$$\n",
     "\n",
-    "The effect of sensitivity variations is to reduce the amount of *light* reaching the sensor. In the equation above, that means that the flat multiplies just the sky and stars portion of the input:\n",
+    "The effect of sensitivity variations is to reduce the amount of *light* reaching\n",
+    "the sensor. In the equation above, that means that the flat multiplies just the\n",
+    "sky and stars portion of the input:\n",
     "\n",
     "$$\n",
     "\\text{image} = \\text{bias} + \\text{noise} + \\text{dark current} + \\text{flat} \\times (\\text{sky} + \\text{stars})\n",
@@ -97,7 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the cell below we construct the last image from the previous notebook. Recall that there we used a read noise of 5 electrons/pixel, dark current of 0.1 electron/pix/sec, bias level of 1100, and sky background of 20 counts."
+    "In the cell below we construct the last image from the previous notebook. Recall\n",
+    "that there we used a read noise of 5 electrons/pixel, dark current of 0.1\n",
+    "electron/pix/sec, bias level of 1100, and sky background of 20 counts."
    ]
   },
   {
@@ -124,7 +138,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The individual pieces of the image are assembled below; it is the inclusion of the flat that makes this the closest of the simulated images to a realistic images."
+    "The individual pieces of the image are assembled below; it is the inclusion of\n",
+    "the flat that makes this the closest of the simulated images to a realistic\n",
+    "images."
    ]
   },
   {
@@ -149,7 +165,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visually, this does not look any different than the final image in the previous notebook; the effects of sensitivity variations are typically not evident in raw images unless the sky background is large. \n",
+    "Visually, this does not look any different than the final image in the previous\n",
+    "notebook; the effects of sensitivity variations are typically not evident in raw\n",
+    "images unless the sky background is large.\n",
     "\n",
     "You can see the effect by artificially increasing the sky background."
    ]
