--- a/notebooks/01-05-Calibration-overview.ipynb
+++ b/notebooks/01-05-Calibration-overview.ipynb
@@ -11,9 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An image of the sky contains counts from several sources. The task of data reduction (another name for image calibration) is to remove all non-celestial counts from the image and to correct for non-uniform sensitivity.\n",
+    "An image of the sky contains counts from several sources. The task of data\n",
+    "reduction (another name for image calibration) is to remove all non-celestial\n",
+    "counts from the image and to correct for non-uniform sensitivity.\n",
     "\n",
-    "At the end of the previous notebook we arrived at an expression for the counts in a science image in terms of the sources of counts:\n",
+    "At the end of the previous notebook we arrived at an expression for the counts\n",
+    "in a science image in terms of the sources of counts:\n",
     "\n",
     "$$\n",
     "\\text{raw image} = \\text{bias} + \\text{noise} + \\text{dark current} + \\text{flat} \\times (\\text{sky} + \\text{stars}).\n",
@@ -25,9 +28,11 @@
     "\\text{stars} + \\text{noise} = \\frac{\\text{raw image} - \\text{bias} - \\text{dark current}}{\\text{flat}} - \\text{sky}\n",
     "$$\n",
     "\n",
-    "**It is *impossible* to remove the noise from the raw image because the noise is random.**\n",
+    "**It is *impossible* to remove the noise from the raw image because the noise is\n",
+    "random.**\n",
     "\n",
-    "The dark current is typically calculated from a *dark frame* (aka dark image). Such an image has bias and read noise in it as well, so:\n",
+    "The dark current is typically calculated from a *dark frame* (aka dark image).\n",
+    "Such an image has bias and read noise in it as well, so:\n",
     "\n",
     "$$\n",
     "\\text{dark current} + \\text{noise} = (\\text{dark frame} - \\text{bias})/(\\text{dark exposure time})\n",
@@ -42,7 +47,10 @@
    "source": [
     "## This noise cannot be removed from CCD images\n",
     "\n",
-    "To demonstrate that you cannot remove the noise from an image, let's construct an image with just stars and noise and try to subtract a noise image created with the same parameters. The amount of noise here is exaggerated to make it clear in the images."
+    "To demonstrate that you cannot remove the noise from an image, let's construct\n",
+    "an image with just stars and noise and try to subtract a noise image created\n",
+    "with the same parameters. The amount of noise here is exaggerated to make it\n",
+    "clear in the images."
    ]
   },
   {
@@ -68,7 +76,8 @@
    "source": [
     "### First, some stars with noise\n",
     "\n",
-    "The image below shows stars (the larger \"blobs\" in the image) but shows quite a bit of noise as well (the much smaller \"dots\")."
+    "The image below shows stars (the larger \"blobs\" in the image) but shows quite a\n",
+    "bit of noise as well (the much smaller \"dots\")."
    ]
   },
   {
@@ -93,9 +102,12 @@
    "source": [
     "### Now an *incorrect* attempt at reducing noise\n",
     "\n",
-    "Notice that the call to the noise function has exactly the same arguments as above, in much the same way your camera's electronics will have the same noise properties every time you read out an image.\n",
+    "Notice that the call to the noise function has exactly the same arguments as\n",
+    "above, in much the same way your camera's electronics will have the same noise\n",
+    "properties every time you read out an image.\n",
     "\n",
-    "However, the amount of noise has **increased**, not decreased. It's much harder to pick out the stars in this image."
+    "However, the amount of noise has **increased**, not decreased. It's much harder\n",
+    "to pick out the stars in this image."
    ]
   },
   {
@@ -115,11 +127,14 @@
    "source": [
     "## Every image has noise\n",
     "\n",
-    "Every image, including calibration images like bias and dark frames, has noise. If we tried to calibrate images by taking a single bias image and a single dark image, the final result might well look worse than before the image is reduced.\n",
+    "Every image, including calibration images like bias and dark frames, has noise.\n",
+    "If we tried to calibrate images by taking a single bias image and a single dark\n",
+    "image, the final result might well look worse than before the image is reduced.\n",
     "\n",
     "For demonstration, we'll see what happens below.\n",
     "\n",
-    "Note that here we construct *realistic* bias and dark, but leave read noise out of the flat; we'll return to that point later. "
+    "Note that here we construct *realistic* bias and dark, but leave read noise out\n",
+    "of the flat; we'll return to that point later."
    ]
   },
   {
@@ -128,7 +143,8 @@
    "source": [
     "### First, set parameters for the CCD\n",
     "\n",
-    "These are the same as in the previous notebook, except for the read noise, which is 700$e-$, 100 times larger than in the previous notebook."
+    "These are the same as in the previous notebook, except for the read noise, which\n",
+    "is 700$e-$, 100 times larger than in the previous notebook."
    ]
   },
   {
@@ -189,7 +205,9 @@
    "source": [
     "### Uncalibrated image\n",
     "\n",
-    "Below we display the uncalibrated image; in a moment we'll compare it to the calibrated version. Even though they don't stand out there really are stars in  it."
+    "Below we display the uncalibrated image; in a moment we'll compare it to the\n",
+    "calibrated version. Even though they don't stand out there really are stars in\n",
+    "it."
    ]
   },
   {
@@ -208,7 +226,8 @@
    "source": [
     "### Reduce (calibrate) the star image\n",
     "\n",
-    "First we calculate the dark current, scaled to the exposure time of our light image."
+    "First we calculate the dark current, scaled to the exposure time of our light\n",
+    "image."
    ]
   },
   {
@@ -224,7 +243,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we subtract the bias and dark current from the star image and then apply the flat correction."
+    "Next, we subtract the bias and dark current from the star image and then apply\n",
+    "the flat correction."
    ]
   },
   {
@@ -253,7 +273,9 @@
     "\n",
     "The stars stand more clearly than in the unreduced image.\n",
     "\n",
-    "This image does not look *much* better than the uncalibrated image, but remember that the read noise used in this simulated image, 700 $e^-$ per pixel, is unrealistically high. "
+    "This image does not look *much* better than the uncalibrated image, but remember\n",
+    "that the read noise used in this simulated image, 700 $e^-$ per pixel, is\n",
+    "unrealistically high."
    ]
   },
   {
@@ -262,7 +284,11 @@
    "source": [
     "### Reducing the image increases the noise in the image\n",
     "\n",
-    "The histogram below shows pixel values before and after calibration. The width of the distribution is a measure of the read noise. As expected, reducing the image increases the read noise. One reason one takes several calibration images of each type is to reduce the amount of noise in the calibration image. That will, in turn, keep the noise in the final image as small as possible."
+    "The histogram below shows pixel values before and after calibration. The width\n",
+    "of the distribution is a measure of the read noise. As expected, reducing the\n",
+    "image increases the read noise. One reason one takes several calibration images\n",
+    "of each type is to reduce the amount of noise in the calibration image. That\n",
+    "will, in turn, keep the noise in the final image as small as possible."
    ]
   },
   {
