--- a/notebooks/01-11-reading-images.ipynb
+++ b/notebooks/01-11-reading-images.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Reading images\n",
     "\n",
-    "Astropy provides a few ways to read in FITS images, some in the core package and others in affiliated packages.\n",
+    "Astropy provides a few ways to read in FITS images, some in the core package and\n",
+    "others in affiliated packages.\n",
     "\n",
     "Before exploring those, we'll create a set of (fake) images to work with."
    ]
@@ -28,11 +29,19 @@
    "source": [
     "## Working with directories\n",
     "\n",
-    "The cell below contains the path to the images. In this notebook we'll use it both to store the fake images we generate and to read images. In normal use, you wouldn't start by writing images there, however. \n",
+    "The cell below contains the path to the images. In this notebook we'll use it\n",
+    "both to store the fake images we generate and to read images. In normal use, you\n",
+    "wouldn't start by writing images there, however.\n",
     "\n",
-    "If the images are in the same directory as the notebook you can omit this, or set it to an empty string `''`. Having images in the same directory as the notebook is less complicated, but it's not at all uncommon to need to work with images in a different directory.\n",
+    "If the images are in the same directory as the notebook you can omit this, or\n",
+    "set it to an empty string `''`. Having images in the same directory as the\n",
+    "notebook is less complicated, but it's not at all uncommon to need to work with\n",
+    "images in a different directory.\n",
     "\n",
-    "Later, we'll look at how to generate the full path to an image (directory plus file name) in a way that will work on any platform. One of the approaches to loading images (using `ccdproc.ImageFileCollection`) lets you mostly forget about this."
+    "Later, we'll look at how to generate the full path to an image (directory plus\n",
+    "file name) in a way that will work on any platform. One of the approaches to\n",
+    "loading images (using `ccdproc.ImageFileCollection`) lets you mostly forget\n",
+    "about this."
    ]
   },
   {
@@ -125,9 +134,13 @@
    "source": [
     "## Option 1: Reading a single image with `astropy.io.fits`\n",
     "\n",
-    "This option gives you the most flexibility but is the least adapted to CCD images specifically. What you read in is a list of FITS extensions; you must first select the one you want then access the data or header as desired. \n",
+    "This option gives you the most flexibility but is the least adapted to CCD\n",
+    "images specifically. What you read in is a list of FITS extensions; you must\n",
+    "first select the one you want then access the data or header as desired.\n",
     "\n",
-    "We'll open up the first of the fake images, `img-0001.fits`. To combine that with the directory name we'll use Python 3's `pathlib`, which ensures that the path combination will work on Windows too."
+    "We'll open up the first of the fake images, `img-0001.fits`. To combine that\n",
+    "with the directory name we'll use Python 3's `pathlib`, which ensures that the\n",
+    "path combination will work on Windows too."
    ]
   },
   {
@@ -148,7 +161,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `hdu_list` is a list of FITS Header-Data Units. In this case there is just one, containing both the image header and data, which can be accessed as shown below."
+    "The `hdu_list` is a list of FITS Header-Data Units. In this case there is just\n",
+    "one, containing both the image header and data, which can be accessed as shown\n",
+    "below."
    ]
   },
   {
@@ -183,9 +198,13 @@
    "source": [
     "## Option 2:  Use `CCDData` to read in a single image\n",
     "\n",
-    "Astropy contains a `CCDData` object for representing a single image. It's not as flexible as using `astrop.io.fits` directly (for example, it assumes there is only one FITS extension and that it contains image data) but it sets up several properties that make the data easier to work with. \n",
+    "Astropy contains a `CCDData` object for representing a single image. It's not as\n",
+    "flexible as using `astrop.io.fits` directly (for example, it assumes there is\n",
+    "only one FITS extension and that it contains image data) but it sets up several\n",
+    "properties that make the data easier to work with.\n",
     "\n",
-    "We'll read in the same single image we did in the example above, `img-0001.fits`."
+    "We'll read in the same single image we did in the example above,\n",
+    "`img-0001.fits`."
    ]
   },
   {
@@ -201,7 +220,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data and header are accessed similarly to how you access it in an HDU returned by `astropy.io.fits`:"
+    "The data and header are accessed similarly to how you access it in an HDU\n",
+    "returned by `astropy.io.fits`:"
    ]
   },
   {
@@ -226,7 +246,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are a [number of features of `CCDData`](https://astropy.readthedocs.io/en/stable/nddata/ccddata.html) that make it convenient for working with WCS, slicing, and more. Some of those features will be discussed in more detail in the notebooks that follow."
+    "There are a [number of features of `CCDData`](https://astropy.readthedocs.io/en/stable/nddata/ccddata.html) that make it convenient for working\n",
+    "with WCS, slicing, and more. Some of those features will be discussed in more\n",
+    "detail in the notebooks that follow."
    ]
   },
   {
@@ -235,7 +257,10 @@
    "source": [
     "## Option 3: Working with a directory of images using `ImageFileCollection`\n",
     "\n",
-    "The affiliated package [ccdproc](https://ccdproc.readthedocs.io/) provides an easier way to work with collections of images in a directory: an `ImageFileCollection`. The `ImageFileCollection` is initialized with the name of the directory containing the images."
+    "The affiliated package [ccdproc](https://ccdproc.readthedocs.io/) provides an easier way\n",
+    "to work with collections of images in a directory: an `ImageFileCollection`. The\n",
+    "`ImageFileCollection` is initialized with the name of the directory containing\n",
+    "the images."
    ]
   },
   {
@@ -252,7 +277,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we didn't need to worry about using `pathlib` to combine the directory and file name, instead we give the collection the name of the directory."
+    "Note that we didn't need to worry about using `pathlib` to combine the directory\n",
+    "and file name, instead we give the collection the name of the directory."
    ]
   },
   {
@@ -261,7 +287,8 @@
    "source": [
     "### Summary of directory contents\n",
     "\n",
-    "The `summary` property provides an overview of the files in the directory: it's an astropy `Table`, so you can access columns in the usual way."
+    "The `summary` property provides an overview of the files in the directory: it's\n",
+    "an astropy `Table`, so you can access columns in the usual way."
    ]
   },
   {
@@ -279,7 +306,8 @@
    "source": [
     "### Filtering and iterating over images\n",
     "\n",
-    "The convenient thing about `ImageFileCollection` is that it provides easy ways to filter or loop over files via FITS header keyword values. \n",
+    "The convenient thing about `ImageFileCollection` is that it provides easy ways\n",
+    "to filter or loop over files via FITS header keyword values.\n",
     "\n",
     "For example, looping over just the flat files is one line of code:"
    ]
@@ -298,7 +326,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of iterating over HDUs, as in the example above, you can iterate over just the headers (with `.headers`) or just the data (with `.data`). You can use any FITS keyword from the header as a keyword for selecting the images you want. In addition, you can return the file name while also iterating."
+    "Instead of iterating over HDUs, as in the example above, you can iterate over\n",
+    "just the headers (with `.headers`) or just the data (with `.data`). You can use\n",
+    "any FITS keyword from the header as a keyword for selecting the images you want.\n",
+    "In addition, you can return the file name while also iterating."
    ]
   },
   {
@@ -315,7 +346,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [documentation for `ImageFileCollection`](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html) describes more of its capabilities. `ImageFileCollection` can automatically save a copy of each image as you iterate over them, for example."
+    "The [documentation for `ImageFileCollection`](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html) describes more of its capabilities.\n",
+    "`ImageFileCollection` can automatically save a copy of each image as you iterate\n",
+    "over them, for example."
    ]
   },
   {
