--- a/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
+++ b/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
@@ -18,9 +18,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bias in a CCD camera is a DC offset applied to all pixels so that when the voltage in each pixel is converted to a number the number will always be positive. In an ideal CCD the bias would be the same for every pixel and not change over time. In practice, the bias is slightly different for each pixel, and can vary by a count or two from night to night or during a night.\n",
+    "The bias in a CCD camera is a DC offset applied to all pixels so that when the\n",
+    "voltage in each pixel is converted to a number the number will always be\n",
+    "positive. In an ideal CCD the bias would be the same for every pixel and not\n",
+    "change over time. In practice, the bias is slightly different for each pixel,\n",
+    "and can vary by a count or two from night to night or during a night.\n",
     "\n",
-    "A bias *image* is a picture taken with the shutter closed and zero exposure time; think about it as a command to the camera to do whatever it usually does to prepare the camera's electronics to take an image and then immediately read out the CCD as though you had taken a picture."
+    "A bias *image* is a picture taken with the shutter closed and zero exposure\n",
+    "time; think about it as a command to the camera to do whatever it usually does\n",
+    "to prepare the camera's electronics to take an image and then immediately read\n",
+    "out the CCD as though you had taken a picture."
    ]
   },
   {
@@ -29,7 +36,11 @@
    "source": [
     "## Sample bias images\n",
     "\n",
-    "The images below are a single bias frame and an average 100 bias frames from an [Andor Apogee Aspen CG16M](http://www.andor.com/pdfs/specifications/Apogee_Aspen_CG16M_Specifications.pdf), a low-end 4k × 4k CCD with a [Kodak KAF-16803 sensor chip](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF). That model camera has a typical bias level around 1000 and read noise around 10 $e^-$, though the precise value varies from camera to camera and with temperature."
+    "The images below are a single bias frame and an average 100 bias frames from an\n",
+    "[Andor Apogee Aspen CG16M](http://www.andor.com/pdfs/specifications/Apogee_Aspen_CG16M_Specifications.pdf), a low-end 4k × 4k CCD with a\n",
+    "[Kodak KAF-16803 sensor chip](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF). That model camera has a typical bias level\n",
+    "around 1000 and read noise around 10 $e^-$, though the precise value varies from\n",
+    "camera to camera and with temperature."
    ]
   },
   {
@@ -100,12 +111,18 @@
    "source": [
     "### Note a few things\n",
     "\n",
-    "+ The bias level in this specific camera is about 1023 (the mid-range of the colorbar).\n",
-    "+ The image is brighter on the left and right edges. This \"amplifier glow\" is frequently present and caused by the CCD electronics (photosensors with an applied voltage are LEDs).\n",
-    "+ There are several vertical lines; these are columns for which the bias level is consistently higher.\n",
+    "+ The bias level in this specific camera is about 1023 (the mid-range of the\n",
+    "colorbar).\n",
+    "+ The image is brighter on the left and right edges. This \"amplifier glow\" is\n",
+    "frequently present and caused by the CCD electronics (photosensors with an\n",
+    "applied voltage are LEDs).\n",
+    "+ There are several vertical lines; these are columns for which the bias level\n",
+    "is consistently higher.\n",
     "+ There is noticeable \"static\" in the images; that is read noise.\n",
-    "+ None of the variations are particularly large. \n",
-    "+ Combining several bias images vastly reduces the read noise. This example is a little unrealistic in that 100 bias images were combined but does illustrate the idea that combining images reduces noise."
+    "+ None of the variations are particularly large.\n",
+    "+ Combining several bias images vastly reduces the read noise. This example is a\n",
+    "little unrealistic in that 100 bias images were combined but does illustrate the\n",
+    "idea that combining images reduces noise."
    ]
   },
   {
@@ -114,7 +131,15 @@
    "source": [
     "## Impact of combining images on noise\n",
     "\n",
-    "As discussed at length in the [notebook on combination](01-06-Image-combination.ipynb), the reason for taking and combining several calibration images is to reduce the noise if the images used for calibration. The difference between a single image and a combination of images is apparent in the images above. Another way to see the impact of combining images in the histogram of pixel values. Notice that the distribution of values is much narrower for the combined image than for a single bias. Pixels near the edges, where the amplifier glow is large, are binned separately from the rest of the pixels to emphasize the uniformity of the chip away from the glow."
+    "As discussed at length in the [notebook on combination](01-06-Image-combination.ipynb), the reason for\n",
+    "taking and combining several calibration images is to reduce the noise if the\n",
+    "images used for calibration. The difference between a single image and a\n",
+    "combination of images is apparent in the images above. Another way to see the\n",
+    "impact of combining images in the histogram of pixel values. Notice that the\n",
+    "distribution of values is much narrower for the combined image than for a single\n",
+    "bias. Pixels near the edges, where the amplifier glow is large, are binned\n",
+    "separately from the rest of the pixels to emphasize the uniformity of the chip\n",
+    "away from the glow."
    ]
   },
   {
@@ -151,7 +176,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The progression here is to \"calibrate\" the bias images by subtracting overscan, if desired, trim the overscan from the bias images if it is present, and combine all of the bias images to make a \"combined\" bias (another common term for these images is \"master\" bias and occasionally \"super\" bias). "
+    "The progression here is to \"calibrate\" the bias images by subtracting overscan,\n",
+    "if desired, trim the overscan from the bias images if it is present, and combine\n",
+    "all of the bias images to make a \"combined\" bias (another common term for these\n",
+    "images is \"master\" bias and occasionally \"super\" bias)."
    ]
   }
  ],
