--- a/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
@@ -11,9 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final step is to combine the individual calibrated bias images into a single combined image. That combined image will have less noise than the individual images, minimizing the noise added to the remaining images when the bias is subtracted.\n",
+    "The final step is to combine the individual calibrated bias images into a single\n",
+    "combined image. That combined image will have less noise than the individual\n",
+    "images, minimizing the noise added to the remaining images when the bias is\n",
+    "subtracted.\n",
     "\n",
-    "Regardless of which path you took through the calibration of the biases (with overscan or without) there should be a folder named `reduced` that contains the calibrated bias images. If there is not, please run the previous notebook before continuing with this one."
+    "Regardless of which path you took through the calibration of the biases (with\n",
+    "overscan or without) there should be a folder named `reduced` that contains the\n",
+    "calibrated bias images. If there is not, please run the previous notebook before\n",
+    "continuing with this one."
    ]
   },
   {
@@ -41,14 +47,21 @@
    "source": [
     "## Recommended settings for image combination\n",
     "\n",
-    "As discussed in the [notebook about combining images](), the recommendation is that you combine by averaging the individual images but sigma clip to remove extreme values. \n",
+    "As discussed in the [notebook about combining images](), the recommendation is\n",
+    "that you combine by averaging the individual images but sigma clip to remove\n",
+    "extreme values.\n",
     "\n",
     "[ccdproc]() provides two ways to combine:\n",
     "\n",
-    "+ An object-oriented interface built around the `Combiner` object, described in the [ccdproc documentation on image combination]().\n",
-    "+ A function called `combine`, which we will use here because the function allows one to specify the maximum amount of memory that should be used during combination. That feature can be essential depending on how many images you need to combine, how big they are, and how much memory your computer has. \n",
+    "+ An object-oriented interface built around the `Combiner` object, described in\n",
+    "the [ccdproc documentation on image combination]().\n",
+    "+ A function called `combine`, which we will use here because the function\n",
+    "allows one to specify the maximum amount of memory that should be used during\n",
+    "combination. That feature can be essential depending on how many images you need\n",
+    "to combine, how big they are, and how much memory your computer has.\n",
     "\n",
-    "*NOTE: If using a version of ccdproc lower than 2.0 set the memory limit a factor of 2-3 lower than you want the maximum memory consumption to be.*"
+    "*NOTE: If using a version of ccdproc lower than 2.0 set the memory limit a\n",
+    "factor of 2-3 lower than you want the maximum memory consumption to be.*"
    ]
   },
   {
@@ -62,7 +75,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The remainder of this section assumes the calibrated bias images are in the folder `example1-reduced` which is created in the previous notebook."
+    "The remainder of this section assumes the calibrated bias images are in the\n",
+    "folder `example1-reduced` which is created in the previous notebook."
    ]
   },
   {
@@ -83,7 +97,8 @@
     "\n",
     "+ selects the calibrated bias images,\n",
     "+ combines them using the `combine` function,\n",
-    "+ adds the keyword `COMBINED` to the header so that later calibration steps can easily identify which bias to use, and \n",
+    "+ adds the keyword `COMBINED` to the header so that later calibration steps can\n",
+    "easily identify which bias to use, and\n",
     "+ writes the file."
    ]
   },
@@ -113,7 +128,11 @@
    "source": [
     "### Result\n",
     "\n",
-    "A single calibrated image and the combined image are shown below. There is significant two-dimensional structure in the bias that cannot easily be removed by subtracting only the overscan in the next image reduction steps. It takes little time to acquire bias images and doing so will result in higher quality science images."
+    "A single calibrated image and the combined image are shown below. There is\n",
+    "significant two-dimensional structure in the bias that cannot easily be removed\n",
+    "by subtracting only the overscan in the next image reduction steps. It takes\n",
+    "little time to acquire bias images and doing so will result in higher quality\n",
+    "science images."
    ]
   },
   {
@@ -136,7 +155,8 @@
    "source": [
     "## Example 2: Thermo-electrically cooled camera\n",
     "\n",
-    "The process for combining the images is exactly the same as in example 1. The only difference is the directory that contains the calibrated bias frames."
+    "The process for combining the images is exactly the same as in example 1. The\n",
+    "only difference is the directory that contains the calibrated bias frames."
    ]
   },
   {
@@ -157,7 +177,8 @@
     "\n",
     "+ selects the calibrated bias images,\n",
     "+ combines them using the `combine` function,\n",
-    "+ adds the keyword `COMBINED` to the header so that later calibration steps can easily identify which bias to use, and \n",
+    "+ adds the keyword `COMBINED` to the header so that later calibration steps can\n",
+    "easily identify which bias to use, and\n",
     "+ writes the file."
    ]
   },
@@ -187,7 +208,8 @@
    "source": [
     "### Result\n",
     "\n",
-    "The difference between a single calibrated bias image and the combined bias image is much clearer in this case."
+    "The difference between a single calibrated bias image and the combined bias\n",
+    "image is much clearer in this case."
    ]
   },
   {
