--- a/notebooks/03-05-Calibrate-dark-images.ipynb
+++ b/notebooks/03-05-Calibrate-dark-images.ipynb
@@ -6,11 +6,16 @@
    "source": [
     "# Calibrate dark images\n",
     "\n",
-    "Dark images, like any other images, need to be calibrated. Depending on the data you have and the choices you have made in reducing your data the steps to reducing your images may include:\n",
+    "Dark images, like any other images, need to be calibrated. Depending on the data\n",
+    "you have and the choices you have made in reducing your data the steps to\n",
+    "reducing your images may include:\n",
     "\n",
-    "1. Subtracting overscan (only if you decide to subtract overscan from all images)\n",
-    "2. Trim the image (if it has overscan, whether you are using the overscan or not)\n",
-    "3. Subtract bias (if you need to scale the calibrated dark frames to a different exposure time)."
+    "1. Subtracting overscan (only if you decide to subtract overscan from all\n",
+    "images)\n",
+    "2. Trim the image (if it has overscan, whether you are using the overscan or\n",
+    "not)\n",
+    "3. Subtract bias (if you need to scale the calibrated dark frames to a different\n",
+    "exposure time)."
    ]
   },
   {
@@ -39,7 +44,10 @@
    "source": [
     "### Take a look at what images you have\n",
     "\n",
-    "First we gather up some information about the raw images and the reduced images up to this point. These examples have darks stored in a subdirectory of the folder with the rest of the images, so we create an `ImageFileCollection` for each."
+    "First we gather up some information about the raw images and the reduced images\n",
+    "up to this point. These examples have darks stored in a subdirectory of the\n",
+    "folder with the rest of the images, so we create an `ImageFileCollection` for\n",
+    "each."
    ]
   },
   {
@@ -95,18 +103,30 @@
    "source": [
     "### Decide which calibration  steps to take\n",
     "\n",
-    "This example is, again, one of the chips of the LFC camera at Palomar. In earlier notebooks we have seen that the chip has a useful overscan region (LINK), has little dark current except for some hot pixels and sensor glow in one corner of the chip.\n",
+    "This example is, again, one of the chips of the LFC camera at Palomar. In\n",
+    "earlier notebooks we have seen that the chip has a useful overscan region\n",
+    "(LINK), has little dark current except for some hot pixels and sensor glow in\n",
+    "one corner of the chip.\n",
     "\n",
-    "Looking at the list of non-dark images (i.e. the flat and light images) shows that for each exposure time in the non-dark images there is a set of dark exposures that has a matching, or very close to matching, exposure time.\n",
+    "Looking at the list of non-dark images (i.e. the flat and light images) shows\n",
+    "that for each exposure time in the non-dark images there is a set of dark\n",
+    "exposures that has a matching, or very close to matching, exposure time.\n",
     "\n",
-    "To be more explicit, there are flats with exposure times of 7.0 sec and 70.011 sec and darks with exposure time of 7.0 and 70.0 sec. The dark and flat exposure times are close enough that there is no need to scale them.  The two images of an object are each roughly 300 sec, matching the darks with exposure time 300 sec. The very small difference in exposure time, under 0.1 sec, does not need to be compensated for.\n",
+    "To be more explicit, there are flats with exposure times of 7.0 sec and 70.011\n",
+    "sec and darks with exposure time of 7.0 and 70.0 sec. The dark and flat exposure\n",
+    "times are close enough that there is no need to scale them.  The two images of\n",
+    "an object are each roughly 300 sec, matching the darks with exposure time 300\n",
+    "sec. The very small difference in exposure time, under 0.1 sec, does not need to\n",
+    "be compensated for.\n",
     "\n",
     "Given this, we will:\n",
     "\n",
-    "1. Subtract overscan from each of the darks. The useful overscan region is XXX (see LINK).\n",
+    "1. Subtract overscan from each of the darks. The useful overscan region is XXX\n",
+    "(see LINK).\n",
     "2. Trim the overscan out of the dark images\n",
     "\n",
-    "We will *not* subtract bias from these images because we will *not* need to rescale them to a different exposure time."
+    "We will *not* subtract bias from these images because we will *not* need to\n",
+    "rescale them to a different exposure time."
    ]
   },
   {
@@ -179,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by looking at what exposure times we have in this data. "
+    "We begin by looking at what exposure times we have in this data."
    ]
   },
   {
@@ -197,14 +217,20 @@
    "source": [
     "### Decide what steps to take next\n",
     "\n",
-    "In this case the only dark frames have exposure time 90 sec. Though that matches the exposure time of the science images, the flat field images are much shorter exposure time, ranging from 1 sec to 1.21 sec. That type range of exposure is typical when twilights flats are taken. Since these are a much different exposure time than the darks, the dark frames will need to be scaled.\n",
+    "In this case the only dark frames have exposure time 90 sec. Though that matches\n",
+    "the exposure time of the science images, the flat field images are much shorter\n",
+    "exposure time, ranging from 1 sec to 1.21 sec. That type range of exposure is\n",
+    "typical when twilights flats are taken. Since these are a much different\n",
+    "exposure time than the darks, the dark frames will need to be scaled.\n",
     "\n",
-    "Recall that for this camera the overscan is not useful and should simply be trimmed off.\n",
+    "Recall that for this camera the overscan is not useful and should simply be\n",
+    "trimmed off.\n",
     "\n",
     "Given this, we will:\n",
     "\n",
     "1. Trim the overscan from each of the dark frames.\n",
-    "2. Subtract calibration bias from the dark frames so that we can scale the darks to a different exposure time."
+    "2. Subtract calibration bias from the dark frames so that we can scale the darks\n",
+    "to a different exposure time."
    ]
   },
   {
@@ -218,7 +244,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we read the combined bias image created in the previous notebook. Though we could do this based on the file name, using a systematic set of header keywords to keep track of which images have been combined is less likely to lead to errors."
+    "First, we read the combined bias image created in the previous notebook. Though\n",
+    "we could do this based on the file name, using a systematic set of header\n",
+    "keywords to keep track of which images have been combined is less likely to lead\n",
+    "to errors."
    ]
   },
   {
