--- a/notebooks/05-04-Combining-flats.ipynb
+++ b/notebooks/05-04-Combining-flats.ipynb
@@ -6,9 +6,14 @@
    "source": [
     "# Combining flats\n",
     "\n",
-    "There is one step in combining flats that is different than for most other image combination: the flats should be scaled to a common value before combining them. This is particularly important if the flats are twilight flats in which the average image value typically changes significantly as the images are being taken.\n",
+    "There is one step in combining flats that is different than for most other image\n",
+    "combination: the flats should be scaled to a common value before combining them.\n",
+    "This is particularly important if the flats are twilight flats in which the\n",
+    "average image value typically changes significantly as the images are being\n",
+    "taken.\n",
     "\n",
-    "Flats are typically grouped by filter when combining them. That is, one combined flat is produced for each filter in which flats were taken.\n",
+    "Flats are typically grouped by filter when combining them. That is, one combined\n",
+    "flat is produced for each filter in which flats were taken.\n",
     "\n",
     "Combination will be done for each of the two examples in the previous notebook."
    ]
@@ -37,7 +42,9 @@
    "source": [
     "## Example 1\n",
     "\n",
-    "We begin by setting up an image collection for the reduced data. This data is from chip 0 of the cryogenically-cooled Large Format Camera at Palomar Observatory."
+    "We begin by setting up an image collection for the reduced data. This data is\n",
+    "from chip 0 of the cryogenically-cooled Large Format Camera at Palomar\n",
+    "Observatory."
    ]
   },
   {
@@ -74,7 +81,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These flats are dome flats, essentially pictures of a screen in the dome illuminated by a light source, so one would not expect there to be much variable in the typical pixel value between different exposures. There is typically *some* variation, though, so we graph it below."
+    "These flats are dome flats, essentially pictures of a screen in the dome\n",
+    "illuminated by a light source, so one would not expect there to be much variable\n",
+    "in the typical pixel value between different exposures. There is typically\n",
+    "*some* variation, though, so we graph it below."
    ]
   },
   {
@@ -98,11 +108,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although this is less frame-to-frame variation than we will see in Example 2, it is about 5%. If we were to combine these without scaling the flats to a common value then the images with higher counts would effectively get more weight than the images. \n",
+    "Although this is less frame-to-frame variation than we will see in Example 2, it\n",
+    "is about 5%. If we were to combine these without scaling the flats to a common\n",
+    "value then the images with higher counts would effectively get more weight than\n",
+    "the images.\n",
     "\n",
-    "There is a substantial difference between the mean and median of this data. Typically it is better to use the median because extreme values do not affect the median as much as the mean.\n",
+    "There is a substantial difference between the mean and median of this data.\n",
+    "Typically it is better to use the median because extreme values do not affect\n",
+    "the median as much as the mean.\n",
     "\n",
-    "To scale the frames so that they have the same median value we need to define a function that can calculate the inverse of the median given the data."
+    "To scale the frames so that they have the same median value we need to define a\n",
+    "function that can calculate the inverse of the median given the data."
    ]
   },
   {
@@ -119,7 +135,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function is passed into the `scale` argument of `combine` below. One combined flat is created for each filter in the data."
+    "This function is passed into the `scale` argument of `combine` below. One\n",
+    "combined flat is created for each filter in the data."
    ]
   },
   {
@@ -153,7 +170,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will begin by checking that the right number of combined flats have been created. There were two filters, `g'` and `i'` in the raw data so there should be two combined flats. We need to refresh the `ImageFileCollection` for the reduced data because new files, our flats, have been added to them."
+    "We will begin by checking that the right number of combined flats have been\n",
+    "created. There were two filters, `g'` and `i'` in the raw data so there should\n",
+    "be two combined flats. We need to refresh the `ImageFileCollection` for the\n",
+    "reduced data because new files, our flats, have been added to them."
    ]
   },
   {
@@ -191,11 +211,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first thing to notice is that the flats are different in these two filters. That is expected because one of the elements in the optical path, the filter, is different.\n",
+    "The first thing to notice is that the flats are different in these two filters.\n",
+    "That is expected because one of the elements in the optical path, the filter, is\n",
+    "different.\n",
     "\n",
-    "The pattern of electronics in the flat images is because this is a backside-illuminated CCD. The light-detecting pixels are on the under side of the chip and the light needs to pass through the chip to reach the sensor. The small dark spots are places where the chip wasn't thinned uniformly.\n",
+    "The pattern of electronics in the flat images is because this is a\n",
+    "backside-illuminated CCD. The light-detecting pixels are on the under side of\n",
+    "the chip and the light needs to pass through the chip to reach the sensor. The\n",
+    "small dark spots are places where the chip wasn't thinned uniformly.\n",
     "\n",
-    "Compare this with [Example 2](#Discussion-of-Example-2) below, which shows a flat taken with a front-side illuminated camera."
+    "Compare this with [Example 2](#Discussion-of-Example-2) below, which shows a flat\n",
+    "taken with a front-side illuminated camera."
    ]
   },
   {
@@ -204,7 +230,8 @@
    "source": [
     "## Example 2\n",
     "\n",
-    "The data in this example is from a thermo-electrically cooled Andor Aspen CG16M. These flats are twilight flats, taken just after sunset."
+    "The data in this example is from a thermo-electrically cooled Andor Aspen CG16M.\n",
+    "These flats are twilight flats, taken just after sunset."
    ]
   },
   {
@@ -234,7 +261,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Twilight flats typically differ more from frame-to-frame than dome flats, as shown in the figure below."
+    "Twilight flats typically differ more from frame-to-frame than dome flats, as\n",
+    "shown in the figure below."
    ]
   },
   {
@@ -288,7 +316,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We expect only one combined flat because there was only one filter. The `ImageFileCollection` is refreshed before we query it because the combined flats were added after the collection was created."
+    "We expect only one combined flat because there was only one filter. The\n",
+    "`ImageFileCollection` is refreshed before we query it because the combined flats\n",
+    "were added after the collection was created."
    ]
   },
   {
@@ -323,7 +353,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This flat looks very different than the one in [Example 1](#Discussion-of-Example-1) because this CCD is front-side illuminated and the previous one is back-side illuminated. That means the sensor is on the top of the chip and the light does not pass through the sensor chip itself to reach the sensors. Though only one filter is shown here, the flat field looks slightly different through other filters on this camera."
+    "This flat looks very different than the one in [Example 1](#Discussion-of-Example-1)\n",
+    "because this CCD is front-side illuminated and the previous one is back-side\n",
+    "illuminated. That means the sensor is on the top of the chip and the light does\n",
+    "not pass through the sensor chip itself to reach the sensors. Though only one\n",
+    "filter is shown here, the flat field looks slightly different through other\n",
+    "filters on this camera."
    ]
   }
  ],
