--- a/notebooks/06-00-Reducing-science-images.ipynb
+++ b/notebooks/06-00-Reducing-science-images.ipynb
@@ -30,10 +30,12 @@
    "source": [
     "## Overview\n",
     "\n",
-    "[ccdproc](ccdproc.readthedocs.io) provides a couple of ways to approach calibration of the science images:\n",
+    "[ccdproc](ccdproc.readthedocs.io) provides a couple of ways to approach\n",
+    "calibration of the science images:\n",
     "\n",
-    "+ Perform each of the individual steps manually using `subtract_bias`, `subtract_dark`, and `flat_correct`.\n",
-    "+ Use the [`ccd_process` function]() to perform all of the reduction steps. \n",
+    "+ Perform each of the individual steps manually using `subtract_bias`,\n",
+    "`subtract_dark`, and `flat_correct`.\n",
+    "+ Use the [`ccd_process` function]() to perform all of the reduction steps.\n",
     "\n",
     "This notebook will do each of those in separate sections below."
    ]
@@ -94,12 +96,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data in this example is from chip 0 of the Large Format Camera at Palomar Observatory. In earlier notebooks we determined that: \n",
+    "The data in this example is from chip 0 of the Large Format Camera at Palomar\n",
+    "Observatory. In earlier notebooks we determined that:\n",
     "\n",
     "+ This CCD has a [useful overscan region]().\n",
     "+ There is [no need to scale dark frames]() in this data, and so no need to subtract bias.\n",
     "\n",
-    "First, we create [ImageFileCollection](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html)s for the raw data and the calibrated data, and define variables for the image type of the flat field and the science images (there are, unfortunately, no standard names for these). "
+    "First, we create [ImageFileCollection](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html)s for the raw data and the calibrated\n",
+    "data, and define variables for the image type of the flat field and the science\n",
+    "images (there are, unfortunately, no standard names for these)."
    ]
   },
   {
@@ -156,9 +161,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both of these images will use the 300 second dark exposure to remove dark current and there is a flat field image for each of the two filters present in the data. \n",
+    "Both of these images will use the 300 second dark exposure to remove dark\n",
+    "current and there is a flat field image for each of the two filters present in\n",
+    "the data.\n",
     "\n",
-    "Though we could hard code which dark to use, it is straightforward to set up a dictionary for accessing the darks, and a separate for accessing the science images. The goal is to write code that  is more easily reused."
+    "Though we could hard code which dark to use, it is straightforward to set up a\n",
+    "dictionary for accessing the darks, and a separate for accessing the science\n",
+    "images. The goal is to write code that  is more easily reused."
    ]
   },
   {
@@ -182,7 +191,9 @@
     "+ Subtract the dark current (which in this case also includes the bias)\n",
     "+ Flat correct the image\n",
     "\n",
-    "These are the minimum steps needed to calibrate. Gain correcting the data and identifying cosmic rays are additional steps that might often be done at this stage. Identification of cosmic rays will be discussed in [this notebook]()."
+    "These are the minimum steps needed to calibrate. Gain correcting the data and\n",
+    "identifying cosmic rays are additional steps that might often be done at this\n",
+    "stage. Identification of cosmic rays will be discussed in [this notebook]()."
    ]
   },
   {
@@ -244,9 +255,15 @@
     "scrolled": false
    },
    "source": [
-    "In each reduced image the overall pattern in the flat field has been removed, and the sensor glow along the left edge and in the bottom left corner of the uncalibrated images has been removed. The background in the calibrated images is still not perfectly uniform, though that background can be removed using photutils if desired. The partial bad column visible in both uncalibrated images is also still present in the calibrated images, particularly in the `g'` filter. \n",
+    "In each reduced image the overall pattern in the flat field has been removed,\n",
+    "and the sensor glow along the left edge and in the bottom left corner of the\n",
+    "uncalibrated images has been removed. The background in the calibrated images is\n",
+    "still not perfectly uniform, though that background can be removed using\n",
+    "photutils if desired. The partial bad column visible in both uncalibrated images\n",
+    "is also still present in the calibrated images, particularly in the `g'` filter.\n",
     "\n",
-    "Those pixels will need to be masked, as described in the [notebook on bad pixels]()."
+    "Those pixels will need to be masked, as described in the [notebook on bad\n",
+    "pixels]()."
    ]
   },
   {
@@ -260,12 +277,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The camera in this example is a thermo-electrically cooled Andor Aspen CG16M. In previous notebooks we decided that:\n",
+    "The camera in this example is a thermo-electrically cooled Andor Aspen CG16M. In\n",
+    "previous notebooks we decided that:\n",
     "\n",
     "+ The overscan region of this camera is not useful.\n",
-    "+ For this data set the dark frames needed to be scaled, so we need to subtract the bias frame from each science image.\n",
+    "+ For this data set the dark frames needed to be scaled, so we need to subtract\n",
+    "the bias frame from each science image.\n",
     "\n",
-    "First, we create [ImageFileCollection](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html)s for the raw data and the calibrated data, and define variables for the image type of the flat field and the science images (there are, unfortunately, no standard names for these). "
+    "First, we create [ImageFileCollection](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html)s for the raw data and the\n",
+    "calibrated data, and define variables for the image type of the flat field and\n",
+    "the science images (there are, unfortunately, no standard names for these)."
    ]
   },
   {
@@ -307,7 +328,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are only two science images, both in the same filter and with the same exposure time.\n",
+    "There are only two science images, both in the same filter and with the same\n",
+    "exposure time.\n",
     "\n",
     "The combined calibration images available are listed below."
    ]
@@ -326,7 +348,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although there is only one of each type of combined calibration image, the code below sets up a dictionary for the flats and darks. That code will work in a more typical night when there might be several filters and multiple exposure times."
+    "Although there is only one of each type of combined calibration image, the code\n",
+    "below sets up a dictionary for the flats and darks. That code will work in a\n",
+    "more typical night when there might be several filters and multiple exposure\n",
+    "times."
    ]
   },
   {
@@ -351,7 +376,8 @@
     "+ Trim the overscan\n",
     "+ Subtract bias, because bias was subtracted from the dark frames\n",
     "+ Subtract dark, using the dark closest in exposure time to the science image.\n",
-    "+ Flat correct the images, using the combined flat whose filter matches the science image."
+    "+ Flat correct the images, using the combined flat whose filter matches the\n",
+    "science image."
    ]
   },
   {
@@ -403,9 +429,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In both images most of the nonunifomity in the background has been removed along the bright column and the sensor glow on the left and right edges of the uncalibrated images.\n",
+    "In both images most of the nonunifomity in the background has been removed along\n",
+    "the bright column and the sensor glow on the left and right edges of the\n",
+    "uncalibrated images.\n",
     "\n",
-    "The calibrated image in the top row looks like flat correction has led to a fairly uniform background. The background in the image in the second row is not that uniform. As it turns out the second image was taken much closer to dawn than the first image, so the sky background really was not uniform when the image was taken."
+    "The calibrated image in the top row looks like flat correction has led to a\n",
+    "fairly uniform background. The background in the image in the second row is not\n",
+    "that uniform. As it turns out the second image was taken much closer to dawn\n",
+    "than the first image, so the sky background really was not uniform when the\n",
+    "image was taken."
    ]
   }
  ],
