--- a/notebooks/07-01-Creating-a-sky-flat.ipynb
+++ b/notebooks/07-01-Creating-a-sky-flat.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Creating a sky flat\n",
     "\n",
-    "One way of producing flat field images is to use the science images, combined in a way that eliminates astronomical sources. This provides an exact match to the spectrum of the night sky, since the night sky is the source of light. However, the night sky is dark, so the counts in individual images is low. Many images must be combined to generate a flat with low noise."
+    "One way of producing flat field images is to use the science images, combined in\n",
+    "a way that eliminates astronomical sources. This provides an exact match to the\n",
+    "spectrum of the night sky, since the night sky is the source of light. However,\n",
+    "the night sky is dark, so the counts in individual images is low. Many images\n",
+    "must be combined to generate a flat with low noise."
    ]
   },
   {
@@ -34,11 +38,18 @@
    "source": [
     "## When is it impossible to produce a sky flat?\n",
     "\n",
-    "There are a few circumstances in which producing a sky flat is difficult or impossible:\n",
+    "There are a few circumstances in which producing a sky flat is difficult or\n",
+    "impossible:\n",
     "\n",
-    "+ The telescope tracks very well so stars and other sources are always in roughly the same pixels in all of the images. In this case, there is no way to produce a good flat. If several fields of view are observed this should not be an issue.\n",
-    "+ There is an extended source that covers an appreciable fraction of the field of view. In this case there is likely to be overlap of the extended object between images, so it cannot be removed from the flat.\n",
-    "+ The sky is really dark. In very dark sites the sky background might be low enough that the sky flat is too noisy to be useful. "
+    "+ The telescope tracks very well so stars and other sources are always in\n",
+    "roughly the same pixels in all of the images. In this case, there is no way to\n",
+    "produce a good flat. If several fields of view are observed this should not be\n",
+    "an issue.\n",
+    "+ There is an extended source that covers an appreciable fraction of the field\n",
+    "of view. In this case there is likely to be overlap of the extended object\n",
+    "between images, so it cannot be removed from the flat.\n",
+    "+ The sky is really dark. In very dark sites the sky background might be low\n",
+    "enough that the sky flat is too noisy to be useful."
    ]
   },
   {
@@ -47,11 +58,19 @@
    "source": [
     "## Producing a sky flat\n",
     "\n",
-    "Producing a sky flat is much like producing any other flat. The images must have bias and dark current subtracted (and overscan if it is being used) then combined, rescaling each image to take into account different levels of background illumination. \n",
+    "Producing a sky flat is much like producing any other flat. The images must have\n",
+    "bias and dark current subtracted (and overscan if it is being used) then\n",
+    "combined, rescaling each image to take into account different levels of\n",
+    "background illumination.\n",
     "\n",
-    "It is important to scale the *median* of each image to the same value instead of scaling the *mean* because the presence of bright sources will affect the mean much more than the median.\n",
+    "It is important to scale the *median* of each image to the same value instead of\n",
+    "scaling the *mean* because the presence of bright sources will affect the mean\n",
+    "much more than the median.\n",
     "\n",
-    "One down side of producing sky flats is the need to process the science images twice. The first time all of the usual calibration steps except flat fielding are done, then the flats are produced, then each science image is flat corrected. "
+    "One down side of producing sky flats is the need to process the science images\n",
+    "twice. The first time all of the usual calibration steps except flat fielding\n",
+    "are done, then the flats are produced, then each science image is flat\n",
+    "corrected."
    ]
   },
   {
@@ -60,9 +79,11 @@
    "source": [
     "### Partially calibrate science images\n",
     "\n",
-    "The partially reduced images are saved in a different folder than the completely reduced science images that were processed earlier. \n",
+    "The partially reduced images are saved in a different folder than the completely\n",
+    "reduced science images that were processed earlier.\n",
     "\n",
-    "The images for this example were taken the same night as the other images in \"Example 2\" in earlier notebooks.\n",
+    "The images for this example were taken the same night as the other images in\n",
+    "\"Example 2\" in earlier notebooks.\n",
     "\n",
     "First, we set up some of the locations we will need."
    ]
@@ -85,9 +106,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, load the combined bias and combined dark for this night. Recall that the combined dark for this night was bias-subtracted because it needed to be scaled for the flat images (see [this notebook](03.05-Calibrate-dark-images.ipynb#Example-2:-Overscan-not-subtracted,-bias-is-removed) for more detail).\n",
+    "Next, load the combined bias and combined dark for this night. Recall that the\n",
+    "combined dark for this night was bias-subtracted because it needed to be scaled\n",
+    "for the flat images (see [this notebook](03.05-Calibrate-dark-images.ipynb#Example-2:-Overscan-not-subtracted,-bias-is-removed) for more detail).\n",
     "\n",
-    "All of the science exposures this night had the same exposure time, 90 sec. "
+    "All of the science exposures this night had the same exposure time, 90 sec."
    ]
   },
   {
@@ -104,7 +127,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The telescope tracking changed during this night. Tracking was excellent for observations of Kelt 16b, making the images terrible for sky flats, but excellent for illustrating the failure of sky flats under some circumstances."
+    "The telescope tracking changed during this night. Tracking was excellent for\n",
+    "observations of Kelt 16b, making the images terrible for sky flats, but\n",
+    "excellent for illustrating the failure of sky flats under some circumstances."
    ]
   },
   {
@@ -134,7 +159,11 @@
    "source": [
     "### Combine the partially calibrated images\n",
     "\n",
-    "The combination settings here are important. Either combine by averaging and sigma clip or combine by median. Either should ensure that stars do not show up in your final flat as long as there is enough offset between the images. Images need to be scaled so that the median is the same for each image. Typically, a value of one is chosen as the common value."
+    "The combination settings here are important. Either combine by averaging and\n",
+    "sigma clip or combine by median. Either should ensure that stars do not show up\n",
+    "in your final flat as long as there is enough offset between the images. Images\n",
+    "need to be scaled so that the median is the same for each image. Typically, a\n",
+    "value of one is chosen as the common value."
    ]
   },
   {
