--- a/notebooks/08-00-Image-masking.ipynb
+++ b/notebooks/08-00-Image-masking.ipynb
@@ -6,13 +6,17 @@
    "source": [
     "# Image masking\n",
     "\n",
-    "There are several reasons a particular pixel in a specific image might not be useful:\n",
+    "There are several reasons a particular pixel in a specific image might not be\n",
+    "useful:\n",
     "\n",
-    "+ The pixel could be \"hot,\" meaning it isn't possible to remove the dark current from the pixel.\n",
-    "+ The pixel could be bad in the sense that it does not respond to light the way the other pixels do.\n",
+    "+ The pixel could be \"hot,\" meaning it isn't possible to remove the dark current\n",
+    "from the pixel.\n",
+    "+ The pixel could be bad in the sense that it does not respond to light the way\n",
+    "the other pixels do.\n",
     "+ A cosmic ray can hit the pixel during the image.\n",
     "\n",
-    "The following notebooks walk through identifying each of those types of bad pixels and how to create a mask for them."
+    "The following notebooks walk through identifying each of those types of bad\n",
+    "pixels and how to create a mask for them."
    ]
   }
  ],
