--- a/notebooks/08-01-Identifying-hot-pixels.ipynb
+++ b/notebooks/08-01-Identifying-hot-pixels.ipynb
@@ -13,11 +13,23 @@
    "source": [
     "## Some pixels are too hot\n",
     "\n",
-    "Recall from the [notebook about dark current](03-02-Real-dark-current-noise-and-other-artifacts.ipynb) that even  a cryogenically-cooled camera with low dark current has some pixels with much higher dark current. In the [discussion of \"ideal\" dark current](03-01-Dark-current-The-ideal-case.ipynb) we noted that the counts in a dark image should be proportional to the exposure time. \n",
+    "Recall from the [notebook about dark current](03-02-Real-dark-current-noise-and-other-artifacts.ipynb) that even  a\n",
+    "cryogenically-cooled camera with low dark current has some pixels with much\n",
+    "higher dark current. In the [discussion of \"ideal\" dark current](03-01-Dark-current-The-ideal-case.ipynb) we noted that the\n",
+    "counts in a dark image should be proportional to the exposure time.\n",
     "\n",
-    "For some hot pixels that is not the case, unfortunately, which means that those pixels cannot easily be corrected by subtracting a combined dark. Those pixels can be identified by taking darks with two different (but long) exposure times and comparing the dark current derived from each of the images. The dark current, measured in electron/sec, should be the same in both images if the dark current is really constant. \n",
+    "For some hot pixels that is not the case, unfortunately, which means that those\n",
+    "pixels cannot easily be corrected by subtracting a combined dark. Those pixels\n",
+    "can be identified by taking darks with two different (but long) exposure times\n",
+    "and comparing the dark current derived from each of the images. The dark\n",
+    "current, measured in electron/sec, should be the same in both images if the dark\n",
+    "current is really constant.\n",
     "\n",
-    "Fortunately, the pixels whose response is not proportional to exposure time are usually also pixels with high dark current. It is straightforward to identify those pixels and create a mask to exclude them when processing images. If this weren't the case it might be necessary to take some dark frames with much longer exposure time than otherwise needed."
+    "Fortunately, the pixels whose response is not proportional to exposure time are\n",
+    "usually also pixels with high dark current. It is straightforward to identify\n",
+    "those pixels and create a mask to exclude them when processing images. If this\n",
+    "weren't the case it might be necessary to take some dark frames with much longer\n",
+    "exposure time than otherwise needed."
    ]
   },
   {
@@ -42,22 +54,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example \n",
+    "## Example\n",
     "\n",
-    "There are two combined dark images available for the thermoelectrically-cooled Andor Aspen CG16M discussed as \"Example 2\" in previous notebooks. One is an average of ten 90 second exposures taken during observations of the transiting exoplanet Kelt 16b. The other is an average of twenty 1,000 second exposures taken during commission of the camera. Typically one will not have a single dark of with an exposure time that long, let alone several of them."
+    "There are two combined dark images available for the thermoelectrically-cooled\n",
+    "Andor Aspen CG16M discussed as \"Example 2\" in previous notebooks. One is an\n",
+    "average of ten 90 second exposures taken during observations of the transiting\n",
+    "exoplanet Kelt 16b. The other is an average of twenty 1,000 second exposures\n",
+    "taken during commission of the camera. Typically one will not have a single dark\n",
+    "of with an exposure time that long, let alone several of them."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by reading each combined dark and calculating the dark current from the counts in the image using\n",
+    "We begin by reading each combined dark and calculating the dark current from the\n",
+    "counts in the image using\n",
     "\n",
     "$$\n",
     "\\text{dark current} = \\text{gain} \\times \\text{dark counts}~/ \\text{ exposure time }.\n",
     "$$\n",
     "\n",
-    "The gain for this camera is 1.5 $e^-$/adu. The 1,000 second exposure also needs to be trimmed to remove the overscan region."
+    "The gain for this camera is 1.5 $e^-$/adu. The 1,000 second exposure also needs\n",
+    "to be trimmed to remove the overscan region."
    ]
   },
   {
@@ -80,13 +99,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The histogram below shows the distribution of dark current values in each image. There are some differences we should *expect* to see between the two images.\n",
+    "The histogram below shows the distribution of dark current values in each image.\n",
+    "There are some differences we should *expect* to see between the two images.\n",
     "\n",
-    "Small values of dark current r much more accurately measured in the long exposure. The exposure time in that image was chosen to be as short as possible while still measuring the nominal dark current of 0.01 $e^-$/sec from the manufacturer given that the camera's read noise is 10$e^-$. \n",
+    "Small values of dark current r much more accurately measured in the long\n",
+    "exposure. The exposure time in that image was chosen to be as short as possible\n",
+    "while still measuring the nominal dark current of 0.01 $e^-$/sec from the\n",
+    "manufacturer given that the camera's read noise is 10$e^-$.\n",
     "\n",
-    "For the average of ten 90 second exposures, that read noise will be reduced to 10$e^-/\\sqrt{10} \\approx$3.2$e^-$. After dividng by exposure time this is equivalent to a \"dark current\" of 0.035$e^-$/sec. Roughly twice that is the smallest dark current that can be accurately measured in the 90 second dark.\n",
+    "For the average of ten 90 second exposures, that read noise will be reduced to\n",
+    "10$e^-/\\sqrt{10} \\approx$3.2$e^-$. After dividng by exposure time this is\n",
+    "equivalent to a \"dark current\" of 0.035$e^-$/sec. Roughly twice that is the\n",
+    "smallest dark current that can be accurately measured in the 90 second dark.\n",
     "\n",
-    "For large values of dark current the shorter exposure is more accurate. Some of the pixels saturate (i.e. reach the maximum value the chip can read out, roughly 65,000) in under 90 sec and more of them saturate at some time between 90 seconds and 1,000 seconds. None of those pixels are accurately measured by the long 1,000 second exposure time."
+    "For large values of dark current the shorter exposure is more accurate. Some of\n",
+    "the pixels saturate (i.e. reach the maximum value the chip can read out, roughly\n",
+    "65,000) in under 90 sec and more of them saturate at some time between 90\n",
+    "seconds and 1,000 seconds. None of those pixels are accurately measured by the\n",
+    "long 1,000 second exposure time."
    ]
   },
   {
@@ -109,9 +139,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overall, there appear to be more hot pixels in the 90 sec exposure than in the 1,000 sec exposure. For dark current under 0.1 $e^-$/sec that is certainly affected by the read noise in the 90 sec exposure. \n",
+    "Overall, there appear to be more hot pixels in the 90 sec exposure than in the\n",
+    "1,000 sec exposure. For dark current under 0.1 $e^-$/sec that is certainly\n",
+    "affected by the read noise in the 90 sec exposure.\n",
     "\n",
-    "To get a better idea of how consistent the dark current measurements are we construct a scatter plot with the measured dark current from each image for those pixels in whihc the dark current is larger than 1$e^-$/sec as measured in the longer exposure."
+    "To get a better idea of how consistent the dark current measurements are we\n",
+    "construct a scatter plot with the measured dark current from each image for\n",
+    "those pixels in whihc the dark current is larger than 1$e^-$/sec as measured in\n",
+    "the longer exposure."
    ]
   },
   {
@@ -142,9 +177,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The upper limit on dark current that can be measured with the long exposure time can be clearly seen in the plot above; there is a ceiling at roughly 95$e^-$/sec above which the dark current in the long exposure does not go. \n",
+    "The upper limit on dark current that can be measured with the long exposure time\n",
+    "can be clearly seen in the plot above; there is a ceiling at roughly 95$e^-$/sec\n",
+    "above which the dark current in the long exposure does not go.\n",
     "\n",
-    "It looks like the dark current as measured in each frame is equal for lower values of the dark current, so we replot to get a better look at that region."
+    "It looks like the dark current as measured in each frame is equal for lower\n",
+    "values of the dark current, so we replot to get a better look at that region."
    ]
   },
   {
@@ -168,9 +206,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here it looks like the measured dark currents are consistent until around 4$e^-$/sec. Beyond that the dark current is consistently larger in the short exposure than in the long exposure. \n",
+    "Here it looks like the measured dark currents are consistent until around\n",
+    "4$e^-$/sec. Beyond that the dark current is consistently larger in the short\n",
+    "exposure than in the long exposure.\n",
     "\n",
-    "Because of this, we will mark all pixels with dark current larger than 4$e^-$/sec as bad. Below that the dark current seems to be measured consistently in both exposures so it ought to be possible to remove the dark current by subtracting a combined dark frame."
+    "Because of this, we will mark all pixels with dark current larger than\n",
+    "4$e^-$/sec as bad. Below that the dark current seems to be measured consistently\n",
+    "in both exposures so it ought to be possible to remove the dark current by\n",
+    "subtracting a combined dark frame."
    ]
   },
   {
@@ -196,12 +239,27 @@
    "source": [
     "## Rule of thumb\n",
     "\n",
-    "The example in this notebook is a little unusual in that a very long exposure dark is available. In deciding what pixels to mask because of high dark current you have a few options:\n",
+    "The example in this notebook is a little unusual in that a very long exposure\n",
+    "dark is available. In deciding what pixels to mask because of high dark current\n",
+    "you have a few options:\n",
     "\n",
-    "+ Use whatever exposure time range you have. The images in \"Example 1\" from the previous notebook have darks with exposure times 7, 70 and 300 seconds. The 7 second dark is primarily measuring read noise, so is not likely to be useful. The current in the 70 second and 300 second darks could be compared, though, as it was in this case.\n",
-    "+ If that is not an option, as was the case in the data in \"Example 2\", then you may need to pick a cut off. Keep in mind that the typical camera has very, very low dark current, so a limit like 1$e^-$/sec is not unreasonable.\n",
-    "+ Ask other users of the instrument what they do. Large observatories may provide a a mask image of bad pixels for the camera you are using.\n",
-    "+ Do not do any masking. This is a more reasonable option than you might think. Most pixels are measuring light from the night time sky. If one of these hot pixels happens to be in that background, and outlying pixels are rejected by a method like sigma clipping, then these hot pixels will be excluded from your analysis. If the object of interest happens to fall on one the bad pixels you may well notice it. In time series photometry this sometimes manifests as a single data point that is well outside the trend in the rest of the data. "
+    "+ Use whatever exposure time range you have. The images in \"Example 1\" from the\n",
+    "previous notebook have darks with exposure times 7, 70 and 300 seconds. The 7\n",
+    "second dark is primarily measuring read noise, so is not likely to be useful.\n",
+    "The current in the 70 second and 300 second darks could be compared, though, as\n",
+    "it was in this case.\n",
+    "+ If that is not an option, as was the case in the data in \"Example 2\", then you\n",
+    "may need to pick a cut off. Keep in mind that the typical camera has very, very\n",
+    "low dark current, so a limit like 1$e^-$/sec is not unreasonable.\n",
+    "+ Ask other users of the instrument what they do. Large observatories may\n",
+    "provide a a mask image of bad pixels for the camera you are using.\n",
+    "+ Do not do any masking. This is a more reasonable option than you might think.\n",
+    "Most pixels are measuring light from the night time sky. If one of these hot\n",
+    "pixels happens to be in that background, and outlying pixels are rejected by a\n",
+    "method like sigma clipping, then these hot pixels will be excluded from your\n",
+    "analysis. If the object of interest happens to fall on one the bad pixels you\n",
+    "may well notice it. In time series photometry this sometimes manifests as a\n",
+    "single data point that is well outside the trend in the rest of the data."
    ]
   },
   {
@@ -210,7 +268,9 @@
    "source": [
     "## Saving the mask\n",
     "\n",
-    "The mask can be saved as in a FITS file. We will see in the notebook [XXX]() how to include this mask. Casting the mask as an unsigned integer is necessary because FITS cannot store boolean data."
+    "The mask can be saved as in a FITS file. We will see in the notebook [XXX]() how\n",
+    "to include this mask. Casting the mask as an unsigned integer is necessary\n",
+    "because FITS cannot store boolean data."
    ]
   },
   {
