--- a/notebooks/08-02-Creating-a-mask.ipynb
+++ b/notebooks/08-02-Creating-a-mask.ipynb
@@ -6,14 +6,19 @@
    "source": [
     "# Creating an image mask\n",
     "\n",
-    "Calibration cannot compensate for every defect in a CCD. Some examples (a non-exhaustive list):\n",
+    "Calibration cannot compensate for every defect in a CCD. Some examples (a\n",
+    "non-exhaustive list):\n",
     "\n",
     "+ Some hot pixels are not actually linear with exposure time.\n",
-    "+ Some pixels in the CCD may respond less to light than others in a way that flat frames cannot compensate for.\n",
+    "+ Some pixels in the CCD may respond less to light than others in a way that\n",
+    "flat frames cannot compensate for.\n",
     "+ There may be defects in all or part of a row or column of the chip.\n",
-    "+ Cosmic rays strike the CCD during every exposure. While those are eliminated in the combined calibrated frames with the proper choice of combination parameters, they are not removed from science images.\n",
+    "+ Cosmic rays strike the CCD during every exposure. While those are eliminated\n",
+    "in the combined calibrated frames with the proper choice of combination\n",
+    "parameters, they are not removed from science images.\n",
     "\n",
-    "The first three are discussed in this notebook. Removal of cosmic rays from science images is discussed [in the cosmic ray notebook]()"
+    "The first three are discussed in this notebook. Removal of cosmic rays from\n",
+    "science images is discussed [in the cosmic ray notebook]()"
    ]
   },
   {
@@ -48,13 +53,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ccdproc function [ccdmask](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.ccdmask.html#ccdproc.ccdmask) uses an method that is based on the [IRAF task ccdmask](http://stsdas.stsci.edu/cgi-bin/gethelp.cgi?ccdmask). The method works best when the input image used to detect flaws in the CCD is the ratio of two flat frames with different counts. That may or may not be available depending on what images are collected. \n",
+    "The ccdproc function [ccdmask](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.ccdmask.html#ccdproc.ccdmask) uses an method that is\n",
+    "based on the [IRAF task ccdmask](http://stsdas.stsci.edu/cgi-bin/gethelp.cgi?ccdmask). The method works best when the\n",
+    "input image used to detect flaws in the CCD is the ratio of two flat frames with\n",
+    "different counts. That may or may not be available depending on what images are\n",
+    "collected.\n",
     "\n",
-    "In the example below, which uses images from Example 2 in the reduction notebooks, the two extreme exposure times are 1 sec and 1.2 sec, but the average counts in the images differ by 10,000. These were twilight flats taken just after sunset.\n",
+    "In the example below, which uses images from Example 2 in the reduction\n",
+    "notebooks, the two extreme exposure times are 1 sec and 1.2 sec, but the average\n",
+    "counts in the images differ by 10,000. These were twilight flats taken just\n",
+    "after sunset.\n",
     "\n",
-    "Even with dome flats where the illumination is supposed to be constant the counts may actually vary. If they do not, use a single flat for identifying bad pixels instead of a ratio.\n",
+    "Even with dome flats where the illumination is supposed to be constant the\n",
+    "counts may actually vary. If they do not, use a single flat for identifying bad\n",
+    "pixels instead of a ratio.\n",
     "\n",
-    "We begin by creating an image collection and then the information for all of the calibrated, uncombined, flat images."
+    "We begin by creating an image collection and then the information for all of the\n",
+    "calibrated, uncombined, flat images."
    ]
   },
   {
@@ -90,7 +105,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best we can do here is the ratio of the first and last of the flat images listed above. "
+    "The best we can do here is the ratio of the first and last of the flat images\n",
+    "listed above."
    ]
   },
   {
@@ -142,7 +158,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Running `ccdmask` takes a little time but only needs to be done once, not once for each image. "
+    "Running `ccdmask` takes a little time but only needs to be done once, not once\n",
+    "for each image."
    ]
   },
   {
@@ -159,7 +176,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result of `ccdmask` is one where there is a defect and zero where the chip is good, which matches the format of the mask numpy expects.\n",
+    "The result of `ccdmask` is one where there is a defect and zero where the chip\n",
+    "is good, which matches the format of the mask numpy expects.\n",
     "\n",
     "The input image and derived mask are shown below"
    ]
@@ -185,15 +203,22 @@
    "source": [
     "Two comments are in order:\n",
     "\n",
-    "+ The \"starfish\" pattern in the first image is an artifact of the camera shutter. Ideally, a longer exposure time would be used for the flats to avoid this.\n",
-    "+ It appear at first glance that there were no pixels masked. The problem is that the masked regions are very small and, at the scale shown, happen to not be visible."
+    "+ The \"starfish\" pattern in the first image is an artifact of the camera\n",
+    "shutter. Ideally, a longer exposure time would be used for the flats to avoid\n",
+    "this.\n",
+    "+ It appear at first glance that there were no pixels masked. The problem is\n",
+    "that the masked regions are very small and, at the scale shown, happen to not be\n",
+    "visible."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Two defects in this CCD are shown below. The first is a small patch of pixels that are vastly less sensitive than the rest. The second is a column on the left edge of the CCD. It turns out this column is not actually exposed to light. `ccdmask` correctly identifies both patches as bad. "
+    "Two defects in this CCD are shown below. The first is a small patch of pixels\n",
+    "that are vastly less sensitive than the rest. The second is a column on the left\n",
+    "edge of the CCD. It turns out this column is not actually exposed to light.\n",
+    "`ccdmask` correctly identifies both patches as bad."
    ]
   },
   {
@@ -230,7 +255,10 @@
    "source": [
     "### Saving the mask\n",
     "\n",
-    "The mask can be saved in a FITS file as an image. We will see in [the summary notebook on masking]() how to combine the mask generated here with a mask generated from the dark current and with a cosmic ray mask for each science image."
+    "The mask can be saved in a FITS file as an image. We will see in [the summary\n",
+    "notebook on masking]() how to combine the mask generated here with a mask\n",
+    "generated from the dark current and with a cosmic ray mask for each science\n",
+    "image."
    ]
   },
   {
@@ -255,7 +283,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The flats we used in Example 1, taken with the Large Format Camera at Palomar, are dome flats taken with nearly constant illumination. In that case the best we can do is run `ccdmask` on a single flat image. As we will see, this still allows the identification of several clearly bad areas of the chip.\n",
+    "The flats we used in Example 1, taken with the Large Format Camera at Palomar,\n",
+    "are dome flats taken with nearly constant illumination. In that case the best we\n",
+    "can do is run `ccdmask` on a single flat image. As we will see, this still\n",
+    "allows the identification of several clearly bad areas of the chip.\n",
     "\n",
     "First, a look at the calibratted, but not combined, flat images."
    ]
@@ -278,7 +309,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can double check that a ratio of flats will not be useful by calculating the mean counts in each flat image:"
+    "We can double check that a ratio of flats will not be useful by calculating the\n",
+    "mean counts in each flat image:"
    ]
   },
   {
@@ -300,9 +332,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The variation in counts is so small that the ratio of two flats will not be useful. \n",
+    "The variation in counts is so small that the ratio of two flats will not be\n",
+    "useful.\n",
     "\n",
-    "Instead, we run `ccdmask` on the first flat. There is nothing special about that one. The kind of defects that `ccdmask` tries to identify are in the CCD sensor itself and should be the same for all filters."
+    "Instead, we run `ccdmask` on the first flat. There is nothing special about that\n",
+    "one. The kind of defects that `ccdmask` tries to identify are in the CCD sensor\n",
+    "itself and should be the same for all filters."
    ]
   },
   {
@@ -319,7 +354,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Displaying the flat we used and the mask side-by-side demonstrates that the defects which are clear in the flat are picked up in the mask."
+    "Displaying the flat we used and the mask side-by-side demonstrates that the\n",
+    "defects which are clear in the flat are picked up in the mask."
    ]
   },
   {
@@ -341,7 +377,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A couple of cutouts are shown below illustrating some of the individual defects identified."
+    "A couple of cutouts are shown below illustrating some of the individual defects\n",
+    "identified."
    ]
   },
   {
