--- a/notebooks/08-05-incorporating-masks-into-calibrated-science-images.ipynb
+++ b/notebooks/08-05-incorporating-masks-into-calibrated-science-images.ipynb
@@ -11,16 +11,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are three ways of determining which pixels in a CCD image may need to be masked (this is in addition to whatever mask or bit fields the observatory at which you are taking images may provide).\n",
+    "There are three ways of determining which pixels in a CCD image may need to be\n",
+    "masked (this is in addition to whatever mask or bit fields the observatory at\n",
+    "which you are taking images may provide).\n",
     "\n",
     "Two of them are the same for all of the science images:\n",
     "\n",
-    "+ Hot pixels unlikely to be properly calibrated by subtracting dark current, discussed in [Identifying hot pixels](03-03-Identifying-hot-pixels.ipynb).\n",
-    "+ Bad pixels identified by `ccdproc.ccdmask` from flat field images, discussed in [Creating a mask with `ccdmask`](04-02-Creating-a-mask.ipynb).\n",
+    "+ Hot pixels unlikely to be properly calibrated by subtracting dark current,\n",
+    "discussed in [Identifying hot pixels](03-03-Identifying-hot-pixels.ipynb).\n",
+    "+ Bad pixels identified by `ccdproc.ccdmask` from flat field images, discussed\n",
+    "in [Creating a mask with `ccdmask`](04-02-Creating-a-mask.ipynb).\n",
     "\n",
-    "The third, identifying cosmic rays, discussed in [Cosmic ray removal](06-02-Cosmic-ray-removal.ipynb), will by its nature be different for each science image.\n",
+    "The third, identifying cosmic rays, discussed in\n",
+    "[Cosmic ray removal](06-02-Cosmic-ray-removal.ipynb), will by its nature be different for each\n",
+    "science image.\n",
     "\n",
-    "The first two masks could be added to science images at the time the science images are calibrated, if desired. They are added to the science images here, as a separate step, because in many situations it is fine to omit masking entirely and there is no particular advantage to introducing it earlier."
+    "The first two masks could be added to science images at the time the science\n",
+    "images are calibrated, if desired. They are added to the science images here, as\n",
+    "a separate step, because in many situations it is fine to omit masking entirely\n",
+    "and there is no particular advantage to introducing it earlier."
    ]
   },
   {
@@ -50,7 +59,10 @@
    "source": [
     "## Read masks that are the same for all of the science images\n",
     "\n",
-    "In previous notebooks we constructed a mask based on the dark current and a mask created by ccdmask from a flat image. Displaying the summary of the the information about the reduced images is a handy way to determine which files are the masks."
+    "In previous notebooks we constructed a mask based on the dark current and a mask\n",
+    "created by ccdmask from a flat image. Displaying the summary of the the\n",
+    "information about the reduced images is a handy way to determine which files are\n",
+    "the masks."
    ]
   },
   {
@@ -91,7 +103,8 @@
    "source": [
     "### Combining the masks\n",
     "\n",
-    "We combine the masks using a logical \"or\" since we want to mask out pixels that  unit=u.dimensionless_unscaled bad for any reason. "
+    "We combine the masks using a logical \"or\" since we want to mask out pixels that\n",
+    "unit=u.dimensionless_unscaled bad for any reason."
    ]
   },
   {
@@ -123,16 +136,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Detect cosmic rays \n",
+    "## Detect cosmic rays\n",
     "\n",
-    "Cosmic ray detection was discussed in detail in an [earlier section](06-02-Cosmic-ray-removal.ipynb). Here we loop over all of the calibrated science images and: \n",
+    "Cosmic ray detection was discussed in detail in an\n",
+    "[earlier section](06-02-Cosmic-ray-removal.ipynb). Here we loop over all of the calibrated\n",
+    "science images and:\n",
     "\n",
     "+ detect cosmic rays in them,\n",
     "+ combine the cosmic ray mask with the mask that applies to all images,\n",
-    "+ set the mask of the image to the overall mask, and \n",
+    "+ set the mask of the image to the overall mask, and\n",
     "+ save the image, overwriting the calibrated science image without the mask.\n",
     "\n",
-    "Since the cosmic ray detection takes a while, a status message is displayed before each image is processed."
+    "Since the cosmic ray detection takes a while, a status message is displayed\n",
+    "before each image is processed."
    ]
   },
   {
