--- a/notebooks/03-01-Dark-current-The-ideal-case.ipynb
+++ b/notebooks/03-01-Dark-current-The-ideal-case.ipynb
@@ -28,9 +28,20 @@
    "source": [
     "## A dark frame measures dark current\n",
     "\n",
-    "Recall that *dark current* refers to counts (electrons) generated in a pixel because an electron in the pixel happens to have enough energy to \"break free\" and register as a count. The distribution of electron thermal energies in  pixel follows a [Maxwell-Boltzmann distribution](https://en.wikipedia.org/wiki/Maxwell%E2%80%93Boltzmann_distribution) in which most electrons have energy around $kT$, where $T$ is the temperature of the sensor and $k$ is the Boltzmann constant. There is a distribution of energies, though, and occasionally an electron will be high enough energy to jump to the conducting band in the chip, registering the same as an electron excited by a photon. Since the Maxwell-Boltzmann distribution depends on temperature the rate at which dark current appears in a pixel is also expected to depend on temperature. \n",
+    "Recall that *dark current* refers to counts (electrons) generated in a pixel\n",
+    "because an electron in the pixel happens to have enough energy to \"break free\"\n",
+    "and register as a count. The distribution of electron thermal energies in  pixel\n",
+    "follows a [Maxwell-Boltzmann distribution](https://en.wikipedia.org/wiki/Maxwell%E2%80%93Boltzmann_distribution) in which most electrons have energy\n",
+    "around $kT$, where $T$ is the temperature of the sensor and $k$ is the Boltzmann\n",
+    "constant. There is a distribution of energies, though, and occasionally an\n",
+    "electron will be high enough energy to jump to the conducting band in the chip,\n",
+    "registering the same as an electron excited by a photon. Since the\n",
+    "Maxwell-Boltzmann distribution depends on temperature the rate at which dark\n",
+    "current appears in a pixel is also expected to depend on temperature.\n",
     "\n",
-    "A *dark frame* (also called a *dark image*) is an image taken with your camera with the shutter closed. It is the sum of the bias level of your camera, the readout noise, and the dark current.\n",
+    "A *dark frame* (also called a *dark image*) is an image taken with your camera\n",
+    "with the shutter closed. It is the sum of the bias level of your camera, the\n",
+    "readout noise, and the dark current.\n",
     "\n",
     "You measure the dark current in your camera by taking dark frames."
    ]
@@ -41,7 +52,8 @@
    "source": [
     "### Convenience functions\n",
     "\n",
-    "A couple of functions that will be reused a few times in this notebook are defined below."
+    "A couple of functions that will be reused a few times in this notebook are\n",
+    "defined below."
    ]
   },
   {
@@ -50,7 +62,8 @@
    "source": [
     "**A function to generate dark frames**\n",
     "\n",
-    "This function generates a set of dark frames. It will be used several times below."
+    "This function generates a set of dark frames. It will be used several times\n",
+    "below."
    ]
   },
   {
@@ -83,7 +96,7 @@
    "source": [
     "**A function to plot the distribution of dark counts**\n",
     "\n",
-    "The function below plots the "
+    "The function below plots the"
    ]
   },
   {
@@ -177,17 +190,31 @@
    "source": [
     "## Dark current theory\n",
     "\n",
-    "The expected signal in a dark frame exposure of time $t$ is proportional to $t$. If we call the dark electrons in an exposure $d_e(t)$ and the dark current $d_c(T)$, where $T$ is the temperature, then \n",
+    "The expected signal in a dark frame exposure of time $t$ is proportional to $t$.\n",
+    "If we call the dark electrons in an exposure $d_e(t)$ and the dark current\n",
+    "$d_c(T)$, where $T$ is the temperature, then\n",
     "\n",
     "$$\n",
     "d_e(t) = d_c(T) t.\n",
     "$$\n",
     "\n",
-    "For liquid-cooled cameras, particularly ones cooled by liquid nitrogen, the operating temperature doesn't change. For thermo-electrically cooled cameras one is able to set the desired operating temperature. As a result, you should be able to ignore the temperature dependence of the dark current.\n",
+    "For liquid-cooled cameras, particularly ones cooled by liquid nitrogen, the\n",
+    "operating temperature doesn't change. For thermo-electrically cooled cameras one\n",
+    "is able to set the desired operating temperature. As a result, you should be\n",
+    "able to ignore the temperature dependence of the dark current.\n",
     "\n",
-    "The thermo-electric coolers can usually cool by some fixed amount below the ambient temperature. Though in principle one could choose to always cool by the same fixed amount, like $50^\\circ$C below the ambient temperature, there is an advantage to always running your camera at the same temperature: dark frames taken on one date are potentially useful on another date. If the operating temperature varies then you need to make sure to take dark frames every time you observe unless you carefully characterize the temperature dependence of your dark current. \n",
+    "The thermo-electric coolers can usually cool by some fixed amount below the\n",
+    "ambient temperature. Though in principle one could choose to always cool by the\n",
+    "same fixed amount, like $50^\\circ$C below the ambient temperature, there is an\n",
+    "advantage to always running your camera at the same temperature: dark frames\n",
+    "taken on one date are potentially useful on another date. If the operating\n",
+    "temperature varies then you need to make sure to take dark frames every time you\n",
+    "observe unless you carefully characterize the temperature dependence of your\n",
+    "dark current.\n",
     "\n",
-    "It will turn out that for practical reasons -- not all pixels in your camera have the same dark current -- it is usually best to take dark frames every time you observe anyway."
+    "It will turn out that for practical reasons -- not all pixels in your camera\n",
+    "have the same dark current -- it is usually best to take dark frames every time\n",
+    "you observe anyway."
    ]
   },
   {
@@ -196,7 +223,9 @@
    "source": [
     "## Illustration with dark current only\n",
     "\n",
-    "For the purposes of illustrating some of the properties of dark current and dark frames we'll generate some simulated images in which the counts are due to dark current alone. We'll use these values:\n",
+    "For the purposes of illustrating some of the properties of dark current and dark\n",
+    "frames we'll generate some simulated images in which the counts are due to dark\n",
+    "current alone. We'll use these values:\n",
     "\n",
     "+ Dark current is $d_c(T) = 0.1 e^-$/pixel/sec\n",
     "+ Gain is $g = 1.5 e^-$/ADU\n",
@@ -220,9 +249,14 @@
    "source": [
     "### Dark current is a random process\n",
     "\n",
-    "The dark counts in a dark frame are counts and so they follow a Poisson distribution. The plot below shows the dark current in a number of randomly chosen pixels in 20 different simulated images each with exposure time 100 sec. Note that the counts vary from image to image but that the average is very close to the expected value.\n",
+    "The dark counts in a dark frame are counts and so they follow a Poisson\n",
+    "distribution. The plot below shows the dark current in a number of randomly\n",
+    "chosen pixels in 20 different simulated images each with exposure time 100 sec.\n",
+    "Note that the counts vary from image to image but that the average is very close\n",
+    "to the expected value.\n",
     "\n",
-    "The expected value of the dark counts for this image are $d_e(t)/g = 6.67~$counts."
+    "The expected value of the dark counts for this image are $d_e(t)/g =\n",
+    "6.67~$counts."
    ]
   },
   {
@@ -277,7 +311,10 @@
    "source": [
     "### Dark counts follows a Poisson distribution\n",
     "\n",
-    "The distribution below shows a normalized histogram of number of pixels as a function of dark counts in each pixel for one of the simulated dark frames. Overlaid on the histogram is a Poisson distribution with a mean of $d_e(t_{exp}) = d_C(T) * t_{exp} / g$, where $t_{exp}$ is the exposure time."
+    "The distribution below shows a normalized histogram of number of pixels as a\n",
+    "function of dark counts in each pixel for one of the simulated dark frames.\n",
+    "Overlaid on the histogram is a Poisson distribution with a mean of $d_e(t_{exp})\n",
+    "= d_C(T) * t_{exp} / g$, where $t_{exp}$ is the exposure time."
    ]
   },
   {
@@ -310,9 +347,11 @@
    "source": [
     "## Illustration with dark current and read noise\n",
     "\n",
-    "Now let's run through the same couple of plots with a non-zero read noise. For the sake of illustration, we'll look at two cases:\n",
+    "Now let's run through the same couple of plots with a non-zero read noise. For\n",
+    "the sake of illustration, we'll look at two cases:\n",
     "\n",
-    "1. Moderate read noise of 10 $e^-$ per read, typical of a low-end research-grade CCD\n",
+    "1. Moderate read noise of 10 $e^-$ per read, typical of a low-end research-grade\n",
+    "CCD\n",
     "2. Low read noise of 1 $e^-$ per read\n",
     "\n",
     "In both cases we'll continue with the parameters above to generate our frames:\n",
@@ -321,9 +360,13 @@
     "+ Gain is $g = 1.5 e^-$/ADU\n",
     "+ Exposure time 100 sec\n",
     "\n",
-    "With those choices the expected dark count is 6.67 count, which is 10 $e^-$. That is, not coincidentally, one of the values for read noise that was chosen.\n",
+    "With those choices the expected dark count is 6.67 count, which is 10 $e^-$.\n",
+    "That is, not coincidentally, one of the values for read noise that was chosen.\n",
     "\n",
-    "The dark current rate in this example is somewhat higher than that of a real CCD. A large dark current is used here to demonstrate the interaction of dark current and read noise, and the exposure time has been chosen that expected dark electrons is 10$e-$."
+    "The dark current rate in this example is somewhat higher than that of a real\n",
+    "CCD. A large dark current is used here to demonstrate the interaction of dark\n",
+    "current and read noise, and the exposure time has been chosen that expected dark\n",
+    "electrons is 10$e-$."
    ]
   },
   {
@@ -332,7 +375,9 @@
    "source": [
     "### High noise\n",
     "\n",
-    "In this first case, the read noise and the dark current are both 10$e^-$. As we will see shortly, the dark frame really measures read noise, not dark current, under these circumstances."
+    "In this first case, the read noise and the dark current are both 10$e^-$. As we\n",
+    "will see shortly, the dark frame really measures read noise, not dark current,\n",
+    "under these circumstances."
    ]
   },
   {
@@ -378,7 +423,11 @@
    "source": [
     "**This dark frame measures noise, not dark current**\n",
     "\n",
-    "The pixel distribution is clearly a Gaussian distribution with a width determined by the read noise, not the underlying Poisson distribution that a dark frame is trying to measure. The only way around this (assuming the dark current is large enough that it needs to be subtracted at all) is to make the exposure long enough that the expected counts exceed the dark current.\n",
+    "The pixel distribution is clearly a Gaussian distribution with a width\n",
+    "determined by the read noise, not the underlying Poisson distribution that a\n",
+    "dark frame is trying to measure. The only way around this (assuming the dark\n",
+    "current is large enough that it needs to be subtracted at all) is to make the\n",
+    "exposure long enough that the expected counts exceed the dark current.\n",
     "\n",
     "We explore that case below by adding in a much smaller amount of noise."
    ]
@@ -394,9 +443,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plots below show the result of averaging several (20 in this case) dark frames together. One might hope that averaging reduces the noise enough that the distribution of pixels becomes the Poisson distribution expected for a dark frame. It does not.\n",
+    "The plots below show the result of averaging several (20 in this case) dark\n",
+    "frames together. One might hope that averaging reduces the noise enough that the\n",
+    "distribution of pixels becomes the Poisson distribution expected for a dark\n",
+    "frame. It does not.\n",
     "\n",
-    "*Note:* To correctly calculate the expected distribution of counts in the average of the dark frames one should start with the expectations for the *sum* of the images, them scale counts down by the number of images and the distribution up by the same factor so that the distribution remains normalized."
+    "*Note:* To correctly calculate the expected distribution of counts in the\n",
+    "average of the dark frames one should start with the expectations for the *sum*\n",
+    "of the images, them scale counts down by the number of images and the\n",
+    "distribution up by the same factor so that the distribution remains normalized."
    ]
   },
   {
@@ -417,18 +472,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even the combination of 20 dark frames doesn't lead to a Poisson distribution; the distribution is still a Gaussian whose width is determined by the read noise and the number of images."
+    "Even the combination of 20 dark frames doesn't lead to a Poisson distribution;\n",
+    "the distribution is still a Gaussian whose width is determined by the read noise\n",
+    "and the number of images."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Low noise \n",
+    "### Low noise\n",
     "\n",
-    "In this case the read noise is 1 $e^-$, lower by a factor of ten than the expected dark current for this exposure time, 10$e^-$.\n",
+    "In this case the read noise is 1 $e^-$, lower by a factor of ten than the\n",
+    "expected dark current for this exposure time, 10$e^-$.\n",
     "\n",
-    "This case almost never occurs in real CCDs but it illustrates that with a low enough read noise one can recover the Poisson distribution of the dark current."
+    "This case almost never occurs in real CCDs but it illustrates that with a low\n",
+    "enough read noise one can recover the Poisson distribution of the dark current."
    ]
   },
   {
@@ -485,7 +544,10 @@
    "source": [
     "**Dark frame is measuring dark current**\n",
     "\n",
-    "Unlike the high noise case, the pixels in a single low-noise dark frame follow the Poisson distribution expected for the dark current in this simulated camera. When multiple images are combined the pixels still follow the Poisson distribution, as expected in this case."
+    "Unlike the high noise case, the pixels in a single low-noise dark frame follow\n",
+    "the Poisson distribution expected for the dark current in this simulated camera.\n",
+    "When multiple images are combined the pixels still follow the Poisson\n",
+    "distribution, as expected in this case."
    ]
   }
  ],
