--- a/notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps.ipynb
+++ b/notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps.ipynb
@@ -11,9 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final step is to combine the individual calibrated dark images into a single combined image. That combined image will have less noise than the individual images, minimizing the noise added to the remaining images when the dark is subtracted.\n",
+    "The final step is to combine the individual calibrated dark images into a single\n",
+    "combined image. That combined image will have less noise than the individual\n",
+    "images, minimizing the noise added to the remaining images when the dark is\n",
+    "subtracted.\n",
     "\n",
-    "Regardless of which path you took through the calibration of the biases (with overscan or without) there should be a folder named either `example1-reduced` or `example2-reduced` that contains the calibrated bias and dark images. If there is not, please run the previous notebook before continuing with this one."
+    "Regardless of which path you took through the calibration of the biases (with\n",
+    "overscan or without) there should be a folder named either `example1-reduced` or\n",
+    "`example2-reduced` that contains the calibrated bias and dark images. If there\n",
+    "is not, please run the previous notebook before continuing with this one."
    ]
   },
   {
@@ -41,14 +47,21 @@
    "source": [
     "## Recommended settings for image combination\n",
     "\n",
-    "As discussed in the [notebook about combining images](), the recommendation is that you combine by averaging the individual images but sigma clip to remove extreme values. \n",
+    "As discussed in the [notebook about combining images](), the recommendation is\n",
+    "that you combine by averaging the individual images but sigma clip to remove\n",
+    "extreme values.\n",
     "\n",
     "[ccdproc]() provides two ways to combine:\n",
     "\n",
-    "+ An object-oriented interface built around the `Combiner` object, described in the [ccdproc documentation on image combination]().\n",
-    "+ A function called `combine`, which we will use here because the function allows one to specify the maximum amount of memory that should be used during combination. That feature can be essential depending on how many images you need to combine, how big they are, and how much memory your computer has. \n",
+    "+ An object-oriented interface built around the `Combiner` object, described in\n",
+    "the [ccdproc documentation on image combination]().\n",
+    "+ A function called `combine`, which we will use here because the function\n",
+    "allows one to specify the maximum amount of memory that should be used during\n",
+    "combination. That feature can be essential depending on how many images you need\n",
+    "to combine, how big they are, and how much memory your computer has.\n",
     "\n",
-    "*NOTE: If using a version of ccdproc lower than 2.0 set the memory limit a factor of 2-3 lower than you want the maximum memory consumption to be.*"
+    "*NOTE: If using a version of ccdproc lower than 2.0 set the memory limit a\n",
+    "factor of 2-3 lower than you want the maximum memory consumption to be.*"
    ]
   },
   {
@@ -62,7 +75,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The remained of this section assumes the calibrated bias images are in the folder `example1-reduced` which is created in the previous notebook."
+    "The remained of this section assumes the calibrated bias images are in the\n",
+    "folder `example1-reduced` which is created in the previous notebook."
    ]
   },
   {
@@ -79,9 +93,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make a combined image for each exposure time \n",
+    "### Make a combined image for each exposure time\n",
     "\n",
-    "There are several dark exposure times in this data set. By converting the times in the summary table to a set it returns only the unique values."
+    "There are several dark exposure times in this data set. By converting the times\n",
+    "in the summary table to a set it returns only the unique values."
    ]
   },
   {
@@ -103,7 +118,8 @@
     "\n",
     "+ selects the relevant calibrated dark images,\n",
     "+ combines them using the `combine` function,\n",
-    "+ adds the keyword `COMBINED` to the header so that later calibration steps can easily identify which bias to use, and \n",
+    "+ adds the keyword `COMBINED` to the header so that later calibration steps can\n",
+    "easily identify which bias to use, and\n",
     "+ writes the file whose name includes the exposure time."
    ]
   },
@@ -136,7 +152,8 @@
    "source": [
     "### Result\n",
     "\n",
-    "A single calibrated 300 second dark image and the combined 300 second image are shown below."
+    "A single calibrated 300 second dark image and the combined 300 second image are\n",
+    "shown below."
    ]
   },
   {
@@ -159,7 +176,8 @@
    "source": [
     "## Example 2: Thermo-electrically cooled camera\n",
     "\n",
-    "The process for combining the images is exactly the same as in example 1. The only difference is the directory that contains the calibrated bias frames."
+    "The process for combining the images is exactly the same as in example 1. The\n",
+    "only difference is the directory that contains the calibrated bias frames."
    ]
   },
   {
@@ -176,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make a combined image for each exposure time \n",
+    "### Make a combined image for each exposure time\n",
     "\n",
     "In this example there are only darks of a single exposure time."
    ]
@@ -196,7 +214,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Despite the fact that there is only one exposure time we might as well re-use the code from above. "
+    "Despite the fact that there is only one exposure time we might as well re-use\n",
+    "the code from above."
    ]
   },
   {
@@ -228,7 +247,8 @@
    "source": [
     "### Result\n",
     "\n",
-    "The difference between a single calibrated bias image and the combined bias image is miuch clearer in this case."
+    "The difference between a single calibrated bias image and the combined bias\n",
+    "image is miuch clearer in this case."
    ]
   },
   {
