--- a/notebooks/05-03-Calibrating-the-flats.ipynb
+++ b/notebooks/05-03-Calibrating-the-flats.ipynb
@@ -6,9 +6,14 @@
    "source": [
     "# Calibrating the flats\n",
     "\n",
-    "Recall that the counts in an astronomical image include dark current, noise and a nearly-constant offset, the bias. The individual flat frames need to have bias and dark removed from them. Depending on the exposure times of the images you have, you may or may not need to subtract dark and bias separately.\n",
+    "Recall that the counts in an astronomical image include dark current, noise and\n",
+    "a nearly-constant offset, the bias. The individual flat frames need to have bias\n",
+    "and dark removed from them. Depending on the exposure times of the images you\n",
+    "have, you may or may not need to subtract dark and bias separately.\n",
     "\n",
-    "If the combined dark frame needs to be scaled to a different exposure time then bias and dark must be handled separately; otherwise, the dark and bias can be removed in a single step because dark frames also include bias.\n",
+    "If the combined dark frame needs to be scaled to a different exposure time then\n",
+    "bias and dark must be handled separately; otherwise, the dark and bias can be\n",
+    "removed in a single step because dark frames also include bias.\n",
     "\n",
     "The potential reduction steps for flat frames are below:\n",
     "\n",
@@ -16,16 +21,24 @@
     "+ Subtract bias, if necessary\n",
     "+ Subtract dark current, scaling if necessary (scale down when possible)\n",
     "\n",
-    "As in the chapters about bias and dark we will work through two example. In Example 1 the darks are not scaled and the overscan region is used as part of the calibration. In Example 2 the darks are scaled and the overscan region is trimmed off without being used."
+    "As in the chapters about bias and dark we will work through two example. In\n",
+    "Example 1 the darks are not scaled and the overscan region is used as part of\n",
+    "the calibration. In Example 2 the darks are scaled and the overscan region is\n",
+    "trimmed off without being used."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function definition \n",
+    "### Function definition\n",
     "\n",
-    "The function below finds the nearest dark exposure time to the exposure time of a given image. An exception is raised if the difference in exposure time is larger than `tolerance`, unless `tolerance` is set to `None`. A small numerical tolerance is most useful if you anticipate not scaling the dark frames and finding a dark exposure time close to the time of the image. Disregarding the tolerance is useful if the intent is to scale the dark frames anyway."
+    "The function below finds the nearest dark exposure time to the exposure time of\n",
+    "a given image. An exception is raised if the difference in exposure time is\n",
+    "larger than `tolerance`, unless `tolerance` is set to `None`. A small numerical\n",
+    "tolerance is most useful if you anticipate not scaling the dark frames and\n",
+    "finding a dark exposure time close to the time of the image. Disregarding the\n",
+    "tolerance is useful if the intent is to scale the dark frames anyway."
    ]
   },
   {
@@ -96,11 +109,16 @@
    "source": [
     "## Example 1: no scaling of dark frames\n",
     "\n",
-    "The images for this example are from chip 0 of the Large Format Camera at Palomar Observatory. The raw images are at XXX, and this notebook assumes that you have worked through the notebooks on bias and dark so that there is a folder called `example1-reduced` in the same folder as this notebook. \n",
+    "The images for this example are from chip 0 of the Large Format Camera at\n",
+    "Palomar Observatory. The raw images are at XXX, and this notebook assumes that\n",
+    "you have worked through the notebooks on bias and dark so that there is a folder\n",
+    "called `example1-reduced` in the same folder as this notebook.\n",
     "\n",
-    "We'll go through this example twice: once with a single image to explain each step, then processing all of the flat frames in the directory of raw data.\n",
+    "We'll go through this example twice: once with a single image to explain each\n",
+    "step, then processing all of the flat frames in the directory of raw data.\n",
     "\n",
-    "An image collection is defined below, along with a couple of settings useful for this example. "
+    "An image collection is defined below, along with a couple of settings useful for\n",
+    "this example."
    ]
   },
   {
@@ -186,7 +204,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is not a lot of variation in this. Note that the overscan region on the right stands out as a black bar, and that there is apparently also an overscan region across the top of the chip. There appears to be a slight variaion in pixel values from the bottom to the top of the image."
+    "There is not a lot of variation in this. Note that the overscan region on the\n",
+    "right stands out as a black bar, and that there is apparently also an overscan\n",
+    "region across the top of the chip. There appears to be a slight variaion in\n",
+    "pixel values from the bottom to the top of the image."
    ]
   },
   {
@@ -195,7 +216,10 @@
    "source": [
     "### Subtract overscan and trim, if necessary\n",
     "\n",
-    "The overscan is useful for the LFC and needs to be subtracted and trimmed off. See [this example in the dark reduction notebook](03-05-Calibrate-dark-images.ipynb#Decide-which-calibration--steps-to-take) for a review of the overscan parameters. The overscan region is the Python slice `[:, 2055:]` while the region to be retained after trimming is the Python slice `[:, :2048]`."
+    "The overscan is useful for the LFC and needs to be subtracted and trimmed off.\n",
+    "See [this example in the dark reduction notebook](03-05-Calibrate-dark-images.ipynb#Decide-which-calibration--steps-to-take) for a review of the overscan parameters.\n",
+    "The overscan region is the Python slice `[:, 2055:]` while the region to be\n",
+    "retained after trimming is the Python slice `[:, :2048]`."
    ]
   },
   {
@@ -219,7 +243,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trimming off the overscan makes such a big difference primarily because the image stretch changed; the lowest pixel values are now around 18000 instead of 2000. With that change the non-uniformity across the detector is much clearer."
+    "Trimming off the overscan makes such a big difference primarily because the\n",
+    "image stretch changed; the lowest pixel values are now around 18000 instead of\n",
+    "2000. With that change the non-uniformity across the detector is much clearer."
    ]
   },
   {
@@ -228,7 +254,8 @@
    "source": [
     "### Subtract bias, if necessary\n",
     "\n",
-    "For this particular set of images there are darks with exposure time 7, 70 and 300 sec. The flat images have the exposure times listed below:"
+    "For this particular set of images there are darks with exposure time 7, 70 and\n",
+    "300 sec. The flat images have the exposure times listed below:"
    ]
   },
   {
@@ -244,7 +271,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are close enough to the exposure time of the dark frames that there is no need to scale the darks by exposure time. If the darks are not going to be scaled then there is no need to subtract the bias."
+    "These are close enough to the exposure time of the dark frames that there is no\n",
+    "need to scale the darks by exposure time. If the darks are not going to be\n",
+    "scaled then there is no need to subtract the bias."
    ]
   },
   {
@@ -253,9 +282,13 @@
    "source": [
     "### Subtract dark current, scaling if necessary (scale down when possible)\n",
     "\n",
-    "We need to subtract the dark without scaling it. Rather than manually figuring out which dark to subtract we use the dark frame closest in exposure time to the flat, within a tolerance of 1 second to ensure that we do not end up using a dark *too* far off in exposure time from the flat.\n",
+    "We need to subtract the dark without scaling it. Rather than manually figuring\n",
+    "out which dark to subtract we use the dark frame closest in exposure time to the\n",
+    "flat, within a tolerance of 1 second to ensure that we do not end up using a\n",
+    "dark *too* far off in exposure time from the flat.\n",
     "\n",
-    "First, find the dark exposure time closest to the flat. We will need to do this again later in the notebook, so we define a function to do it."
+    "First, find the dark exposure time closest to the flat. We will need to do this\n",
+    "again later in the notebook, so we define a function to do it."
    ]
   },
   {
@@ -271,7 +304,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It will be convenient to be able to access the darks via a dictionary whose key is the exposure time, so we set that up below."
+    "It will be convenient to be able to access the darks via a dictionary whose key\n",
+    "is the exposure time, so we set that up below."
    ]
   },
   {
@@ -305,7 +339,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is not much change here; that is not surprising since the dark current in this camera is low."
+    "There is not much change here; that is not surprising since the dark current in\n",
+    "this camera is low."
    ]
   },
   {
@@ -319,7 +354,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cell below calibrates each of the flats in the folder, automatically grabbing the correct combined dark for each flat. "
+    "The cell below calibrates each of the flats in the folder, automatically\n",
+    "grabbing the correct combined dark for each flat."
    ]
   },
   {
@@ -356,11 +392,15 @@
    "source": [
     "## Example 2: Dark frames are scaled\n",
     "\n",
-    "The images in this example, like in the previous notebooks, is a thermo-electrically cooled CCD described in more detail in the [overscan notebook](01-08-Overscan.ipynb#Case-2:-Thermo-electrically-cooled-Apogee-Aspen-CG16M). \n",
+    "The images in this example, like in the previous notebooks, is a\n",
+    "thermo-electrically cooled CCD described in more detail in the\n",
+    "[overscan notebook](01-08-Overscan.ipynb#Case-2:-Thermo-electrically-cooled-Apogee-Aspen-CG16M).\n",
     "\n",
-    "We'll go through this example twice: once with a single image to explain each step, then processing all of the flat frames in the directory of raw data.\n",
+    "We'll go through this example twice: once with a single image to explain each\n",
+    "step, then processing all of the flat frames in the directory of raw data.\n",
     "\n",
-    "An image collection is defined below, along with a couple of settings useful for this example. "
+    "An image collection is defined below, along with a couple of settings useful for\n",
+    "this example."
    ]
   },
   {
@@ -448,7 +488,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a much different pattern of variation across the sensor in this case than in Example 1. The multiple \"donuts\" in the image are pieces of dust and there is significant vignetting (darkening) in the top and bottom corners of the image on the right side."
+    "There is a much different pattern of variation across the sensor in this case\n",
+    "than in Example 1. The multiple \"donuts\" in the image are pieces of dust and\n",
+    "there is significant vignetting (darkening) in the top and bottom corners of the\n",
+    "image on the right side."
    ]
   },
   {
@@ -457,7 +500,8 @@
    "source": [
     "### Subtract overscan and trim: only trim for this camera\n",
     "\n",
-    "The overscan is not useful for this camera. The region to be retained after trimming is the Python slice `[:, :4096]`."
+    "The overscan is not useful for this camera. The region to be retained after\n",
+    "trimming is the Python slice `[:, :4096]`."
    ]
   },
   {
@@ -478,7 +522,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trimming off the overscan did not make a big difference primarily because the overscan region of this camera is not useful. A useful overscan would have had values around the bias level for this camera, about 1200 counts. The image stretch did change a bit; prior to trimming the lower end of the color scale was 38000 and now it is 40000. "
+    "Trimming off the overscan did not make a big difference primarily because the\n",
+    "overscan region of this camera is not useful. A useful overscan would have had\n",
+    "values around the bias level for this camera, about 1200 counts. The image\n",
+    "stretch did change a bit; prior to trimming the lower end of the color scale was\n",
+    "38000 and now it is 40000."
    ]
   },
   {
@@ -487,7 +535,8 @@
    "source": [
     "### Subtract bias, if necessary\n",
     "\n",
-    "For this particular set of images there is a combined dark with exposure time 90 sec. The flat images have the exposure times listed below:"
+    "For this particular set of images there is a combined dark with exposure time 90\n",
+    "sec. The flat images have the exposure times listed below:"
    ]
   },
   {
@@ -503,9 +552,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are quite different than the exposure time of the dark frames so the dark will need to be scaled by exposure time, which means that the bias has been removed from the combined dark.\n",
+    "These are quite different than the exposure time of the dark frames so the dark\n",
+    "will need to be scaled by exposure time, which means that the bias has been\n",
+    "removed from the combined dark.\n",
     "\n",
-    "Because of that, the bias needs to be removed the flat before subtracting the dark."
+    "Because of that, the bias needs to be removed the flat before subtracting the\n",
+    "dark."
    ]
   },
   {
@@ -533,7 +585,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Except for a change in the image scale shown on the color bar there isn't much visually different after subtracting the bias."
+    "Except for a change in the image scale shown on the color bar there isn't much\n",
+    "visually different after subtracting the bias."
    ]
   },
   {
@@ -542,7 +595,9 @@
    "source": [
     "### Subtract dark current, scaling if necessary (scale down when possible)\n",
     "\n",
-    "Here we will need to scale the dark from the 90 sec exposure time of the dark frame to the exposure time of each flat image. The [ccdproc function `subtract_dark`]() provides keywords for doing this scaling automatically."
+    "Here we will need to scale the dark from the 90 sec exposure time of the dark\n",
+    "frame to the exposure time of each flat image. The [ccdproc function\n",
+    "`subtract_dark`]() provides keywords for doing this scaling automatically."
    ]
   },
   {
@@ -558,7 +613,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It will be convenient to be able to access the darks via a dictionary whose key is the exposure time, so we set that up below."
+    "It will be convenient to be able to access the darks via a dictionary whose key\n",
+    "is the exposure time, so we set that up below."
    ]
   },
   {
@@ -593,7 +649,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is not much change here; that is not surprising since the dark current in this camera is low."
+    "There is not much change here; that is not surprising since the dark current in\n",
+    "this camera is low."
    ]
   },
   {
@@ -607,7 +664,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cell below calibrates each of the flats in the folder, automatically grabbing the correct combined dark for each flat. "
+    "The cell below calibrates each of the flats in the folder, automatically\n",
+    "grabbing the correct combined dark for each flat."
    ]
   },
   {
